Update translation - 103441942 (#3444) 05082c2917779573379122d8afc7c6a371d94256

--- a/ar/get-tested/index.html
+++ b/ar/get-tested/index.html
@@ -148,7 +148,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>اختبار</h1>
           
-            <p class="small-text">آخر التحديثات&nbsp;5:37 م الساعة 1 فبراير 2021</p>
+            <p class="small-text">آخر التحديثات&nbsp;1:52 م الساعة 24 فبراير 2021</p>
           
         </div>
       </div>
@@ -195,11 +195,11 @@
 
 
 
-<p>تكشف<strong>اختبارات الأجسام المضادة</strong> عن الإصابات السابقة. ويمكنها تحديد فيما إذا كنت مرشحاً جيداً من أجل <a href="/ar/plasma">التبرع ببلازما الدم</a>. يمكن أن يستغرق الجسم من أسبوع إلى 3 أسابيع بعد الإصابة بالعدوى لينتج الأجسام المضادة.</p>
+<p class="js-qa js-qa-answer">تكشف<strong>اختبارات الأجسام المضادة</strong> عن الإصابات السابقة. ويمكنها تحديد فيما إذا كنت مرشحاً جيداً من أجل <a href="/ar/plasma">التبرع ببلازما الدم</a>. يمكن أن يستغرق الجسم من أسبوع إلى 3 أسابيع بعد الإصابة بالعدوى لينتج الأجسام المضادة.</p>
 
 
 
-<p>يمكنك العثور على مواقع لكل من فحوصات PCR الفيروسية والأجسام المضادة على <a href="https://www.arcgis.com/apps/Nearby/index.html?appid=43118dc0d5d348d8ab20a81967a15401">خريطة مواقع إجراء فحوصات كوفيد-19 بكاليفورنيا</a>.</p>
+<p class="js-qa js-qa-answer">يمكنك العثور على مواقع لكل من فحوصات PCR الفيروسية والأجسام المضادة على <a href="https://www.arcgis.com/apps/Nearby/index.html?appid=43118dc0d5d348d8ab20a81967a15401">خريطة مواقع إجراء فحوصات كوفيد-19 بكاليفورنيا</a>.</p>
 
 
 
@@ -296,7 +296,7 @@
                 </button>
                 <div class="card-container" aria-hidden="true">
                   <div class="card-body">
-            <p>نعم. يمكن إجراء <a href="https://www.fda.gov/media/144457/download" aria-label="Emergency Use Authorization to Ellume">اختبار تشخيصي كامل في المنزل بدون وصفة طبية لكوفيد-19 بموجب ترخيص الاستخدام في حالات الطوارئ (EUA)</a> الصادر من إدارة الغذاء والدواء الأمريكية (FDA). يُسمح بإجراء الاختبار للأفراد البالغين من العمر عامين أو أكثر، بما في ذلك أولئك الذين لا تظهر عليهم الأعراض.</p>
+            <p>نعم. يمكن إجراء اختبار تشخيصي كامل في المنزل بدون وصفة طبية لكوفيد-19 بموجب <a aria-label="Emergency Use Authorization to Ellume" href="https://www.fda.gov/media/144457/download">ترخيص الاستخدام في حالات الطوارئ (EUA)</a> الصادر من إدارة الغذاء والدواء الأمريكية (FDA). يُسمح بإجراء الاختبار للأفراد البالغين من العمر عامين أو أكثر، بما في ذلك أولئك الذين لا تظهر عليهم الأعراض.</p>
 <p>الاختبار المنزلي هو اختبار مستضد التدفق الجانبي سريع، وهو نوع من الاختبارات التي تُجري عينة سائلة على طول سطح به جزيئات تفاعلية. تسمح إدارة الغذاء والدواء الأمريكية (FDA) ببيعه في أماكن مثل الصيدليات، حيث يمكن للمريض شرائه وعمل مسحة الأنف وإجراء الاختبار ومعرفة نتائجه في أقل من 20 دقيقة. </p>
 <p>يجب على الأفراد الذين ظهرت نتائجهم إيجابية:</p>
 <ul><li>العزلة الذاتية</li><li>اطلب رعاية إضافية من مزود الرعاية الصحية الخاص بهم</li></ul>
@@ -349,7 +349,7 @@
 <p>يجب على الأفراد الذين ظهرت نتائجهم إيجابية:</p>
 <ul><li>العزلة الذاتية</li><li>اطلب رعاية إضافية من مزود الرعاية الصحية الخاص بهم</li></ul>
 <p>يجب على الأفراد الذين كانت نتائج فحوصاتهم سلبية ويعانون من أعراض شبيهة بأعراض كوفيد المتابعة مع مزود الرعاية الصحية الخاص بهم. من الممكن ظهور نتائج اختبار سلبية مع استمرار الإصابة بفيروس كورونا.</p>
-<p>لمزيد من المعلومات، راجع <a aria-label="FDA news release about first home test" href="https://www.fda.gov/news-events/press-announcements/coronavirus-covid-19-update-fda-authorizes-first-covid-19-test-self-testing-home">التصريحات الصحفية لإدارة الغذاء والدواء</a>.</p>
+<p>لمزيد من المعلومات، راجع <a aria-label="FDA news release about first home test" href="https://www.fda.gov/news-events/press-announcements/coronavirus-covid-19-update-fda-authorizes-first-covid-19-test-self-testing-home">التصريحات الصحفية</a>لإدارة الغذاء والدواء.</p>
 
                   </div>
                 </div>
