--- a/ko/get-tested/index.html
+++ b/ko/get-tested/index.html
@@ -148,7 +148,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>검사</h1>
           
-            <p class="small-text">최종 갱신 일자&nbsp;2021년 2월 1일 오후 5:37</p>
+            <p class="small-text">최종 갱신 일자&nbsp;2021년 2월 24일 오후 1:52</p>
           
         </div>
       </div>
@@ -195,11 +195,11 @@
 
 
 
-<p><strong>항체 검사</strong>는 과거에 감염되었는지 여부를 감지합니다. 이를 통해 <a href="/ko/plasma">혈장 기증</a>에 적합한 대상자 여부를 알수 있습니다. 신체에서 항체를 형성하기까지 감염 후 1~3주가 소요될 수 있습니다.</p>
+<p class="js-qa js-qa-answer"><strong>항체 검사</strong>는 과거에 감염되었는지 여부를 감지합니다. 이를 통해 <a href="/ko/plasma">혈장 기증</a>에 적합한 대상자 여부를 알수 있습니다. 신체에서 항체를 형성하기까지 감염 후 1~3주가 소요될 수 있습니다.</p>
 
 
 
-<p>바이러스 PCR 검사소 및 항체 검사소는 <a href="https://www.arcgis.com/apps/Nearby/index.html?appid=43118dc0d5d348d8ab20a81967a15401">캘리포니아 지도 내 COVID-19 검사 장소</a>에서 확인할 수 있습니다.</p>
+<p class="js-qa js-qa-answer">바이러스 PCR 검사소 및 항체 검사소는 <a href="https://www.arcgis.com/apps/Nearby/index.html?appid=43118dc0d5d348d8ab20a81967a15401">캘리포니아 지도 내 COVID-19 검사 장소</a>에서 확인할 수 있습니다.</p>
 
 
 
@@ -296,7 +296,7 @@
                 </button>
                 <div class="card-container" aria-hidden="true">
                   <div class="card-body">
-            <p>있습니다. 미국 식품의약국(Food and Drug Administration, FDA)은 처방전이 필요없는 가정 전용의 COVID-19 진단 검사에 대해 <a href="https://www.fda.gov/media/144457/download" aria-label="Emergency Use Authorization to Ellume">긴급 사용 승인(Emergency Use Authorization, EUA)</a>을 내렸습니다. 본 검사는 무증상자를 포함하여 만 2세 이상을 대상으로 승인되었습니다.</p>
+            <p>있습니다. 미국 식품의약국(Food and Drug Administration, FDA)은 처방전이 필요없는 가정 전용의 COVID-19 진단 검사에 대해 <a aria-label="Emergency Use Authorization to Ellume" href="https://www.fda.gov/media/144457/download">긴급 사용 승인</a>(Emergency Use Authorization, EUA)을 내렸습니다. 본 검사는 무증상자를 포함하여 만 2세 이상을 대상으로 승인되었습니다.</p>
 <p>가정용 검사는 신속하게 받을 수 있는 측면 유동 항체 검사로서 반응성 분자를 함유한 표면을 따라 액체 검체를 사용하여 진행하는 검사입니다. FDA가 승인한 내용은 환자 구매가 가능한 약국 등의 장소에서 판매하며 코 부위에서 검체를 채취하여 검사를 진행하고 그 결과를 빠르면 20분 이내에 확인하는 것입니다. </p>
 <p>양성 반응을 보이는 경우 다음과 같이 해야 합니다:</p>
 <ul><li>자가 격리</li><li>의료 제공자에게 추가 진료 요청</li></ul>
@@ -349,7 +349,7 @@
 <p>양성 반응을 보이는 경우 다음과 같이 해야 합니다:</p>
 <ul><li>자가 격리</li><li>의료 제공자에게 추가 진료 요청</li></ul>
 <p>음성 반응이 나타나며 COVID-19와 유사한 증상을 겪는 경우 해당 의료 제공자에게 후속 조치를 받아야 합니다. 음성 반응 결과를 나타내면서도 코로나바이러스에 감염될 수 있습니다.</p>
-<p>더 자세한 사항은 <a aria-label="FDA news release about first home test" href="https://www.fda.gov/news-events/press-announcements/coronavirus-covid-19-update-fda-authorizes-first-covid-19-test-self-testing-home">FDA 보도 자료</a>를 참조하십시오.</p>
+<p>더 자세한 사항은 FDA <a aria-label="FDA news release about first home test" href="https://www.fda.gov/news-events/press-announcements/coronavirus-covid-19-update-fda-authorizes-first-covid-19-test-self-testing-home">보도 자료</a>를 참조하십시오.</p>
 
                   </div>
                 </div>
