--- a/tl/get-tested/index.html
+++ b/tl/get-tested/index.html
@@ -148,7 +148,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>Pagsusuri</h1>
           
-            <p class="small-text">Huling na-update&nbsp;Pebrero 1, 2021 sa 5:37 PM</p>
+            <p class="small-text">Huling na-update&nbsp;Pebrero 24, 2021 sa 1:52 PM</p>
           
         </div>
       </div>
@@ -195,11 +195,11 @@
 
 
 
-<p>Natutukoy ng <strong>mga pagsusuri ng antibody</strong> ang mga nakaraang impeksyon. Matutukoy ng mga ito kung isa kang magandang candidate para sa <a href="/tl/plasma">pag-donate ng plasma ng dugo</a>. Maaaring abutin nang 1-3 linggo matapos ang impeksyon bago makagawa ng antibody ang iyong katawan.</p>
+<p class="js-qa js-qa-answer">Natutukoy ng <strong>mga pagsusuri ng antibody</strong> ang mga nakaraang impeksyon. Matutukoy ng mga ito kung isa kang magandang candidate para sa <a href="/tl/plasma">pag-donate ng plasma ng dugo</a>. Maaaring abutin nang 1-3 linggo matapos ang impeksyon bago makagawa ng antibody ang iyong katawan.</p>
 
 
 
-<p>Makakahanap ka ng mga lokasyon para sa pagsusuri ng viral PCR at antibody sa <a href="https://www.arcgis.com/apps/Nearby/index.html?appid=43118dc0d5d348d8ab20a81967a15401">mapa ng California para sa Mga COVID-19 Testing Site</a>.</p>
+<p class="js-qa js-qa-answer">Makakahanap ka ng mga lokasyon para sa pagsusuri ng viral PCR at antibody sa <a href="https://www.arcgis.com/apps/Nearby/index.html?appid=43118dc0d5d348d8ab20a81967a15401">mapa ng California para sa Mga COVID-19 Testing Site</a>.</p>
 
 
 
@@ -296,7 +296,7 @@
                 </button>
                 <div class="card-container" aria-hidden="true">
                   <div class="card-body">
-            <p>Oo. May inilabas ang Pangasiwaan para sa Pagkain at Gamot (Food and Drug Administration, FDA) ng Estados Unidos (United States, U.S.) na <a href="https://www.fda.gov/media/144457/download" aria-label="Emergency Use Authorization to Ellume">Pahintulot para sa Emergency na Paggamit (Emergency Use Authorization, EUA)</a> para sa isang over-the-counter na para sa bahay na diagnostic test para sa COVID-19.. Awtorisado ang pagsusuri para sa mga indibidwal na dalawang taong gulang pataas, kasama ang mga hindi nagpapakita ng mga sintomas.</p>
+            <p>Oo. May inilabas ang Pangasiwaan para sa Pagkain at Gamot (Food and Drug Administration, FDA) ng Estados Unidos (United States, U.S.) na <a aria-label="Emergency Use Authorization to Ellume" href="https://www.fda.gov/media/144457/download">Pahintulot para sa Emergency na Paggamit (Emergency Use Authorization, EUA)</a> para sa isang over-the-counter na para sa bahay na diagnostic test para sa COVID-19. Awtorisado ang pagsusuri para sa mga indibidwal na dalawang taong gulang pataas, kasama ang mga hindi nagpapakita ng mga sintomas.</p>
 <p>Ang pagsusuri sa bahay ay isang rapid at lateral flow na pagsusuri ng antigen, isang uri ng pagsusuri kung saan naglalagay ng liquid na sample sa isang surface na may mga reactive na molecule. Pinapayagan ng FDA ang pagbebenta nito sa mga lugar tulad ng mga botika, kung saan mabibili ito ng isang pasyente, i-swab ang kanyang ilong, gawin ang pagsusuri, at malaman ang mga resulta sa loob ng 20 minuto. </p>
 <p>Ang mga indibidwal na may positibong resulta ay dapat:</p>
 <ul><li>Mag-isolate</li><li>Humingi ng karagdagang pangangalaga mula sa kanilang provider sa pangangalagang pangkalusugan</li></ul>
@@ -349,7 +349,7 @@
 <p>Ang mga indibidwal na may positibong resulta ay dapat:</p>
 <ul><li>Mag-isolate</li><li>Humingi ng karagdagang pangangalaga mula sa kanilang provider sa pangangalagang pangkalusugan</li></ul>
 <p>Ang mga indibidwal na nagnegatibo sa pagsusuri at nakakaranas ng mga sintomas ng tulad sa COVID ay dapat mag-follow up sa kanilang provider sa pangangalagang pangkalusugan. Posibleng magkaroon ng negatibong resulta sa pagsusuri at magkaroon pa rin ng impeksyon ng coronavirus.</p>
-<p>Para sa higit pang impormasyon, tingnan ang <a aria-label="FDA news release about first home test" href="https://www.fda.gov/news-events/press-announcements/coronavirus-covid-19-update-fda-authorizes-first-covid-19-test-self-testing-home">inilabas na balita ng FDA</a>.</p>
+<p>Para sa higit pang impormasyon, tingnan ang <a aria-label="FDA news release about first home test" href="https://www.fda.gov/news-events/press-announcements/coronavirus-covid-19-update-fda-authorizes-first-covid-19-test-self-testing-home">inilabas na balita</a> ng FDA.</p>
 
                   </div>
                 </div>
