--- a/vi/get-tested/index.html
+++ b/vi/get-tested/index.html
@@ -150,7 +150,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>Testing</h1>
           
-            <p class="small-text">Cập nhật mới nhất&nbsp;1 tháng 2, 2021 lúc 17:37</p>
+            <p class="small-text">Cập nhật mới nhất&nbsp;24 tháng 2, 2021 lúc 13:52</p>
           
         </div>
       </div>
@@ -197,11 +197,11 @@
 
 
 
-<p><strong>Xét nghiệm kháng thể</strong> phát hiện các trường hợp từng nhiễm bệnh. Chúng có thể xác định liệu quý vị có phải là ứng cử viên phù hợp để <a href="/vi/plasma">hiến tặng huyết tương</a> hay không. Có thể cần 1-3 tuần sau khi nhiễm bệnh để cơ thể tạo ra kháng thể.</p>
+<p class="js-qa js-qa-answer"><strong>Xét nghiệm kháng thể</strong> phát hiện các trường hợp từng nhiễm bệnh. Chúng có thể xác định liệu quý vị có phải là ứng cử viên phù hợp để <a href="/vi/plasma">hiến tặng huyết tương</a> hay không. Có thể cần 1-3 tuần sau khi nhiễm bệnh để cơ thể tạo ra kháng thể.</p>
 
 
 
-<p>Quý vị có thể tìm các địa điểm xét nghiệm PCR vi-rút và kháng thể trên <a href="https://www.arcgis.com/apps/Nearby/index.html?appid=43118dc0d5d348d8ab20a81967a15401">bản đồ Địa Điểm Xét Nghiệm COVID-19 ở California</a>.</p>
+<p class="js-qa js-qa-answer">Quý vị có thể tìm các địa điểm xét nghiệm PCR vi-rút và kháng thể trên <a href="https://www.arcgis.com/apps/Nearby/index.html?appid=43118dc0d5d348d8ab20a81967a15401">bản đồ Địa Điểm Xét Nghiệm COVID-19 ở California</a>.</p>
 
 
 
@@ -298,7 +298,7 @@
                 </button>
                 <div class="card-container" aria-hidden="true">
                   <div class="card-body">
-            <p>Có. Cơ quan Quản Lý Thực Phẩm và Dược Phẩm Hoa Kỳ (U.S. Food and Drug Administration, FDA) đã ban hành <a href="https://www.fda.gov/media/144457/download" aria-label="Emergency Use Authorization to Ellume">Giấy Phép Sử Dụng Khẩn Cấp (Emergency Use Authorization, EUA)</a> đối với xét nghiệm chẩn đoán COVID-19 hoàn toàn tại nhà không kê toa. Xét nghiệm được phép áp dụng cho những người từ hai tuổi trở lên, kể cả những người không có triệu chứng.</p>
+            <p>Có. Cơ quan Quản Lý Thực Phẩm và Dược Phẩm Hoa Kỳ (U.S. Food and Drug Administration, FDA) đã ban hành <a aria-label="Emergency Use Authorization to Ellume" href="https://www.fda.gov/media/144457/download">Giấy Phép Sử Dụng Khẩn Cấp </a> (Emergency Use Authorization, EUA) đối với xét nghiệm chẩn đoán COVID-19 hoàn toàn tại nhà không kê toa. Xét nghiệm được phép áp dụng cho những người từ hai tuổi trở lên, kể cả những người không có triệu chứng.</p>
 <p>Xét nghiệm tại nhà là xét nghiệm kháng nguyên dòng chảy bên, nhanh chóng, là một loại xét nghiệm chạy mẫu chất lỏng dọc theo bề mặt có các phân tử phản ứng. FDA cho phép bán bộ xét nghiệm ở những nơi như cửa hàng thuốc, nơi bệnh nhân có thể mua, lấy mẫu trong mũi, chạy xét nghiệm và cho kết quả chỉ trong vòng 20 phút. </p>
 <p>Những cá nhân có kết quả xét nghiệm dương tính nên:</p>
 <ul><li>Tự cách ly</li><li>Yêu cầu chăm sóc bổ sung từ nhà cung cấp dịch vụ chăm sóc sức khỏe của họ</li></ul>
@@ -351,7 +351,7 @@
 <p>Những cá nhân có kết quả xét nghiệm dương tính nên:</p>
 <ul><li>Tự cách ly</li><li>Yêu cầu chăm sóc bổ sung từ nhà cung cấp dịch vụ chăm sóc sức khỏe của họ</li></ul>
 <p>Những cá nhân có kết quả xét nghiệm âm tính và gặp các triệu chứng giống COVID nên liên hệ với nhà cung cấp dịch vụ chăm sóc sức khỏe của họ để tiếp tục theo dõi. Có thể có trường hợp nhận được kết quả xét nghiệm âm tính và vẫn bị nhiễm vi-rút corona.</p>
-<p>Để biết thêm thông tin, hãy xem <a aria-label="FDA news release about first home test" href="https://www.fda.gov/news-events/press-announcements/coronavirus-covid-19-update-fda-authorizes-first-covid-19-test-self-testing-home">thông cáo báo chí của FDA</a>.</p>
+<p>Để biết thêm thông tin, hãy xem <a aria-label="FDA news release about first home test" href="https://www.fda.gov/news-events/press-announcements/coronavirus-covid-19-update-fda-authorizes-first-covid-19-test-self-testing-home">thông cáo báo chí</a> của FDA.</p>
 
                   </div>
                 </div>
