--- a/zh-hans/get-tested/index.html
+++ b/zh-hans/get-tested/index.html
@@ -148,7 +148,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>检测</h1>
           
-            <p class="small-text">最后更新时间&nbsp;2021年2月1日, 下午5:37</p>
+            <p class="small-text">最后更新时间&nbsp;2021年2月24日, 下午1:52</p>
           
         </div>
       </div>
@@ -195,11 +195,11 @@
 
 
 
-<p><strong>抗体检测</strong>可以检测既往感染。其可以确定您是否为<a href="/zh-hans/plasma">捐献血浆</a>的合适人选。在感染后，人体可能需要1至3周的时间来产生抗体。</p>
+<p class="js-qa js-qa-answer"><strong>抗体检测</strong>可以检测既往感染。其可以确定您是否为<a href="/zh-hans/plasma">捐献血浆</a>的合适人选。在感染后，人体可能需要1至3周的时间来产生抗体。</p>
 
 
 
-<p>您可以在<a href="https://www.arcgis.com/apps/Nearby/index.html?appid=43118dc0d5d348d8ab20a81967a15401">加州新型冠状病毒检测点地图</a>上找到病毒PCR检测和抗体检测地点。</p>
+<p class="js-qa js-qa-answer">您可以在<a href="https://www.arcgis.com/apps/Nearby/index.html?appid=43118dc0d5d348d8ab20a81967a15401">加州新型冠状病毒检测点地图</a>上找到病毒PCR检测和抗体检测地点。</p>
 
 
 
@@ -296,7 +296,7 @@
                 </button>
                 <div class="card-container" aria-hidden="true">
                   <div class="card-body">
-            <p>可以。美国食品药品监督管理局 (Food and Drug Administration, FDA) 为一项完全居家非处方COVID-19诊断检测发布了<a href="https://www.fda.gov/media/144457/download" aria-label="Emergency Use Authorization to Ellume">紧急使用授权 (Emergency Use Authorization, EUA)</a>。该检测获得授权，可以提供给两岁及以上人士，包括无症状人士。</p>
+            <p>可以。美国食品药品监督管理局 (Food and Drug Administration, FDA) 为一项完全居家非处方COVID-19诊断检测发布了<a aria-label="Emergency Use Authorization to Ellume" href="https://www.fda.gov/media/144457/download">紧急使用授权</a> (Emergency Use Authorization, EUA)。该检测获得授权，可以提供给两岁及以上人士，包括无症状人士。</p>
 <p>该居家检测为快速侧流式抗原检测，该类检测会使液体试样流经带有活性分子的表面。FDA允许在药店等地方贩售该检测工具，人们可以在这些地方购买该工具、采集鼻拭子样本、进行检测并在短短20分钟内得知检测结果。 </p>
 <p>检测结果呈阳性人士应该采取以下措施：</p>
 <ul><li>自我隔离</li><li>向其医疗保健提供者寻求其他护理</li></ul>
@@ -349,7 +349,7 @@
 <p>检测结果呈阳性人士应该采取以下措施：</p>
 <ul><li>自我隔离</li><li>向其医疗保健提供者寻求其他护理</li></ul>
 <p>检测呈阴性并出现新型冠状病毒类似症状的人士，应在其医疗保健提供者处进行随诊。有可能检测结果呈阴性而仍受到新型冠状病毒感染。</p>
-<p>更多信息请参阅<a aria-label="FDA news release about first home test" href="https://www.fda.gov/news-events/press-announcements/coronavirus-covid-19-update-fda-authorizes-first-covid-19-test-self-testing-home">FDA新闻发布</a>。</p>
+<p>更多信息请参阅FDA<a aria-label="FDA news release about first home test" href="https://www.fda.gov/news-events/press-announcements/coronavirus-covid-19-update-fda-authorizes-first-covid-19-test-self-testing-home">新闻发布</a>。</p>
 
                   </div>
                 </div>
