--- a/zh-hant/get-tested/index.html
+++ b/zh-hant/get-tested/index.html
@@ -148,7 +148,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>檢測</h1>
           
-            <p class="small-text">最近更新&nbsp;2021年2月1日, 下午5:37</p>
+            <p class="small-text">最近更新&nbsp;2021年2月24日, 下午1:52</p>
           
         </div>
       </div>
@@ -195,11 +195,11 @@
 
 
 
-<p><strong>抗體檢測</strong>可以檢測既往感染。其可以確定您是否為<a href="/zh-hant/plasma">捐獻血漿</a>的合適人選。在感染後，人體可能需要1至3週的時間來產生抗體。</p>
+<p class="js-qa js-qa-answer"><strong>抗體檢測</strong>可以檢測既往感染。其可以確定您是否為<a href="/zh-hant/plasma">捐獻血漿</a>的合適人選。在感染後，人體可能需要1至3週的時間來產生抗體。</p>
 
 
 
-<p>您可以在<a href="https://www.arcgis.com/apps/Nearby/index.html?appid=43118dc0d5d348d8ab20a81967a15401">加州新型冠狀病毒檢測點地圖</a>上找到病毒PCR檢測和抗體檢測地點。</p>
+<p class="js-qa js-qa-answer">您可以在<a href="https://www.arcgis.com/apps/Nearby/index.html?appid=43118dc0d5d348d8ab20a81967a15401">加州新型冠狀病毒檢測點地圖</a>上找到病毒PCR檢測和抗體檢測地點。</p>
 
 
 
@@ -296,7 +296,7 @@
                 </button>
                 <div class="card-container" aria-hidden="true">
                   <div class="card-body">
-            <p>可以。美國食品藥品監督管理局 (Food and Drug Administration, FDA) 為一項完全居家非處方COVID-19診斷檢測發佈了<a href="https://www.fda.gov/media/144457/download" aria-label="Emergency Use Authorization to Ellume">緊急使用授權 (Emergency Use Authorization, EUA)</a>。該檢測獲得授權，可以提供給兩歲及以上人士，包括無症狀人士。</p>
+            <p>可以。美國食品藥品監督管理局 (Food and Drug Administration, FDA) 為一項完全居家非處方COVID-19診斷檢測發佈了<a aria-label="Emergency Use Authorization to Ellume" href="https://www.fda.gov/media/144457/download">緊急使用授權</a> (Emergency Use Authorization, EUA)。該檢測獲得授權，可以提供給兩歲及以上人士，包括無症狀人士。</p>
 <p>該居家檢測為快速側流式抗原檢測，該類檢測會使液體試樣流經帶有活性分子的表面。FDA允許在藥店等地方販售該檢測工具，人們可以在這些地方購買該工具、採集鼻拭子樣本、進行檢測並在短短20分鐘內得知檢測結果。 </p>
 <p>檢測結果呈陽性人士應該採取以下措施：</p>
 <ul><li>自我隔離</li><li>向其醫療保健提供者尋求其他護理</li></ul>
@@ -349,7 +349,7 @@
 <p>檢測結果呈陽性人士應該採取以下措施：</p>
 <ul><li>自我隔離</li><li>向其醫療保健提供者尋求其他護理</li></ul>
 <p>檢測呈陰性並出現新型冠狀病毒類似症狀的人士，應在其醫療保健提供者處進行隨診。有可能檢測結果呈陰性而仍受到新型冠狀病毒感染。</p>
-<p>更多資訊請參閱<a aria-label="FDA news release about first home test" href="https://www.fda.gov/news-events/press-announcements/coronavirus-covid-19-update-fda-authorizes-first-covid-19-test-self-testing-home">FDA新聞發佈</a>。</p>
+<p>更多資訊請參閱FDA<a aria-label="FDA news release about first home test" href="https://www.fda.gov/news-events/press-announcements/coronavirus-covid-19-update-fda-authorizes-first-covid-19-test-self-testing-home">新聞發佈</a>。</p>
 
                   </div>
                 </div>
