--- a/es/get-tested/index.html
+++ b/es/get-tested/index.html
@@ -148,7 +148,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>Pruebas</h1>
           
-            <p class="small-text">Última actualización&nbsp;1 de febrero de 2021 a las 5:37 p. m.</p>
+            <p class="small-text">Última actualización&nbsp;24 de febrero de 2021 a las 1:52 p. m.</p>
           
         </div>
       </div>
@@ -195,11 +195,11 @@
 
 
 
-<p>Las <strong>pruebas de anticuerpos</strong> detectan infecciones pasadas. Estas pueden determinar si usted es un buen candidato para <a href="/es/plasma">donar plasma sanguíneo</a>. Pueden pasar de una a tres semanas después de la infección antes de que su cuerpo produzca anticuerpos.</p>
+<p class="js-qa js-qa-answer">Las <strong>pruebas de anticuerpos</strong> detectan infecciones pasadas. Estas pueden determinar si usted es un buen candidato para <a href="/es/plasma">donar plasma sanguíneo</a>. Pueden pasar de una a tres semanas después de la infección antes de que su cuerpo produzca anticuerpos.</p>
 
 
 
-<p>Puede encontrar ubicaciones para pruebas de anticuerpos y PCR viral en el <a href="https://www.arcgis.com/apps/Nearby/index.html?appid=43118dc0d5d348d8ab20a81967a15401">mapa de sitios de pruebas de COVID-19 de California</a>.</p>
+<p class="js-qa js-qa-answer">Puede encontrar ubicaciones para pruebas de anticuerpos y PCR viral en el <a href="https://www.arcgis.com/apps/Nearby/index.html?appid=43118dc0d5d348d8ab20a81967a15401">mapa de sitios de pruebas de COVID-19 de California</a>.</p>
 
 
 
@@ -223,19 +223,19 @@
 
 
 
-<h3>Pruebas de la COVID-19 durante la puesta en marcha de las vacunas</h3>
+<h3>Pruebas de COVID-19 durante la puesta en marcha de las vacunas</h3>
 
 
 
-<p>Pasarán muchos meses antes de que hayan suficientes personas completamente vacunadas para detener la propagación de la COVID-19. Por lo tanto, en este momento, el <strong>CDPH no recomienda cambios en los requisitos de las pruebas, incluso para las personas que han sido completamente vacunadas.</strong> A medida que la ciencia y la evidencia evolucionen, el CDPH emitirá una guía actualizada para reflejar la nueva información y los datos. </p>
+<p>Pasarán muchos meses antes de que haya suficientes personas completamente vacunadas para detener la propagación de la COVID-19. Por lo tanto, en este momento, el <strong>CDPH no recomienda cambios en los requisitos de las pruebas, incluso para las personas que han sido completamente vacunadas.</strong> A medida que la ciencia y las evidencias evolucionen, el CDPH emitirá una guía actualizada que refleje la información y los datos nuevos. </p>
 
 
 
-<ul><li>Si su trabajo lo requiere, debe hacerse la prueba con regularidad, incluso si se ha vacunado</li></ul>
+<ul><li>Si su trabajo lo requiere, debe seguir haciéndose la prueba con regularidad, incluso si ya le aplicaron la vacuna.</li></ul>
 
 
 
-<p>El<a href="https://testing.covid19.ca.gov/"> grupo de trabajo de pruebas de COVID-19</a> está trabajando para garantizar que los californianos tengan acceso a las pruebas y que los laboratorios tengan capacidad para satisfacer la demanda. </p>
+<p>El <a href="https://testing.covid19.ca.gov/">grupo de trabajo de pruebas de COVID-19</a> está trabajando para garantizar que los californianos tengan acceso a las pruebas y que los laboratorios tengan capacidad para satisfacer la demanda. </p>
 
 
 
@@ -296,7 +296,7 @@
                 </button>
                 <div class="card-container" aria-hidden="true">
                   <div class="card-body">
-            <p>Sí. La Administración de Alimentos y Medicamentos (Food and Drug Administration, FDA) emitió una <a href="https://www.fda.gov/media/144457/download" aria-label="Emergency Use Authorization to Ellume">autorización de uso de emergencia</a> (Emergency Use Authorization, EUA) para la prueba de autodiagnóstico en casa de venta libre contra la COVID-19. La prueba está autorizada para personas de dos años o más, incluidas aquellas que no muestran síntomas.</p>
+            <p>Sí. La Administración de Alimentos y Medicamentos (Food and Drug Administration, FDA) emitió una <a aria-label="Emergency Use Authorization to Ellume" href="https://www.fda.gov/media/144457/download">autorización de uso de emergencia</a> (Emergency Use Authorization, EUA) para la prueba de autodiagnóstico en casa de venta libre contra la COVID-19. La prueba está autorizada para personas de dos años o más, incluidas aquellas que no muestran síntomas.</p>
 <p>La prueba en casa es una prueba rápida de antígenos de flujo lateral, un tipo de prueba que pasa una muestra líquida a lo largo de una superficie con moléculas reactivas. La FDA permite que se venda en lugares como farmacias, donde un paciente puede comprarla, tomarse una muestra de la nariz, realizar la prueba y conocer los resultados en tan solo 20 minutos. </p>
 <p>Las personas con resultados positivos deben:</p>
 <ul><li>autoaislarse</li><li>buscar atención adicional de su proveedor de atención médica</li></ul>
@@ -349,7 +349,7 @@
 <p>Las personas con resultados positivos deben:</p>
 <ul><li>autoaislarse</li><li>buscar atención adicional de su proveedor de atención médica</li></ul>
 <p>Las personas que resulten negativas y presenten síntomas similares a los de la COVID deben consultar con su proveedor de atención médica. Es posible obtener un resultado negativo en la prueba y aún así estar infectado con coronavirus.</p>
-<p>Para obtener más información, consulte el <a aria-label="FDA news release about first home test" href="https://www.fda.gov/news-events/press-announcements/coronavirus-covid-19-update-fda-authorizes-first-covid-19-test-self-testing-home">comunicado de prensa de la FDA</a>.</p>
+<p>Para obtener más información, consulte el <a aria-label="FDA news release about first home test" href="https://www.fda.gov/news-events/press-announcements/coronavirus-covid-19-update-fda-authorizes-first-covid-19-test-self-testing-home">comunicado de prensa</a> de la FDA.</p>
 
                   </div>
                 </div>
