Update translation - 103440571 (#3443) 8ac9f1a66edd661226277fe50aa6f65bc49ddfbc

--- a/es/hotline/index.html
+++ b/es/hotline/index.html
@@ -148,7 +148,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>Línea de atención de COVID-19</h1>
           
-            <p class="small-text">Última actualización&nbsp;10 de diciembre de 2020 a las 10:07 a. m.</p>
+            <p class="small-text">Última actualización&nbsp;24 de febrero de 2021 a las 1:14 p. m.</p>
           
         </div>
       </div>
@@ -213,10 +213,10 @@
 
 
 <ol>
-<li>Si busca información general acerca de recursos estatales sobre la COVID-19: <strong>use <a href="/es/">covid19.ca.gov</a> o llame al <strong><a href="tel:833-422-4255">833-422-4255</a></strong>. </strong></li>
-<li><span style="font-weight: 400;">Si busca California COVID Notify, el sistema de notificación de exposición a la COVID-19 de Google y Apple: </span><b>visite </b><a href="https://canotify.uchealth.edu/ucsdh/"><span style="font-weight: 400;">California COVID Notify</span></a> <b>o llame al</b><span style="font-weight: 400;"><a href="http://Tel:888-421-9457" data-wplink-url-error="true"> 888-421-9457</a>. </span></li>
-<li>Si busca asistencia y servicios comunitarios: <strong>llame al <a href="tel:211">211</a></strong>.</li>
-<li>Si busca medicamentos y atención médica: <strong>llame a su proveedor de atención médica o farmacia</strong></li>
+<li>Si busca información general acerca de recursos estatales sobre la COVID-19: use <a href="/es/">covid19.ca.gov</a> o llame al <a href="tel:833-422-4255">833-422-4255</a>.</li>
+<li>Si busca California COVID Notify, el sistema de notificación de exposición a la COVID-19 de Google y Apple: visite <a href="https://canotify.uchealth.edu/ucsdh/">California COVID Notify</a> o llame al <a href="Tel:888-421-9457">888-421-9457</a>. </li>
+<li>Si busca asistencia y servicios comunitarios: llame al <a href="tel:211">211</a>.</li>
+<li>Si busca medicamentos y atención médica: llame a su proveedor de atención médica o farmacia.</li>
 </ol>
 
 
