--- a/ko/hotline/index.html
+++ b/ko/hotline/index.html
@@ -148,7 +148,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>COVID-19 상담 전화</h1>
           
-            <p class="small-text">최종 갱신 일자&nbsp;2020년 12월 10일 오전 10:07</p>
+            <p class="small-text">최종 갱신 일자&nbsp;2021년 2월 24일 오후 1:14</p>
           
         </div>
       </div>
@@ -213,10 +213,10 @@
 
 
 <ol>
-<li>주 정부의 COVID-19 자원에 관한 일반 정보를 찾는 경우: <strong><a href="/ko/">covid19.ca.gov</a>를 이용하거나 <strong><a href="tel:833-422-4255">833-422-4255</a></strong>로 전화하십시오. </strong></li>
-<li><span style="font-weight: 400;">Google과 Apple의 노출 통보 시스템인 캘리포니아 COVID Notify: </span><b></b><a href="https://canotify.uchealth.edu/ucsdh/"><span style="font-weight: 400;">캘리포니아 COVID Notify</span></a> <b>를 방문하거나</b><span style="font-weight: 400;"><a href="http://Tel:888-421-9457" data-wplink-url-error="true"> 888-421-9457</a>로 전화하십시오. </span></li>
-<li>지역 사회 서비스와 지원을 찾는 경우: <strong><a href="tel:211">211</a></strong>로 전화하십시오.</li>
-<li>의약품 및 진료가 필요한 경우: <strong>의료 서비스 제공자 또는 약국에 연락하십시오.</strong></li>
+<li>주 정부의 COVID-19 자원에 관한 일반 정보를 찾는 경우: <a href="/ko/">covid19.ca.gov</a>를 이용하거나 <a href="tel:833-422-4255">833-422-4255</a>로 전화하십시오.</li>
+<li>Google과 Apple의 노출 통보 시스템인 California COVID Notify를 찾는 경우: <a href="https://canotify.uchealth.edu/ucsdh/">California COVID Notify</a>를 방문하거나<a href="Tel:888-421-9457"> 888-421-9457</a>로 전화하십시오.</li>
+<li>지역 사회 서비스와 지원을 찾는 경우: <a href="tel:211">211</a>로 전화하십시오.</li>
+<li>의약품 및 진료가 필요한 경우: 의료 서비스 제공자 또는 약국에 연락하십시오.</li>
 </ol>
 
 
