--- a/tl/hotline/index.html
+++ b/tl/hotline/index.html
@@ -148,7 +148,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>Hotline para sa COVID-19</h1>
           
-            <p class="small-text">Huling na-update&nbsp;Disyembre 10, 2020 sa 10:07 AM</p>
+            <p class="small-text">Huling na-update&nbsp;Pebrero 24, 2021 sa 1:14 PM</p>
           
         </div>
       </div>
@@ -213,10 +213,10 @@
 
 
 <ol>
-<li>Kung naghahanap ka ng pangkalahatang impormasyon tungkol sa mga resource ng estado para sa COVID-19: <strong>gamitin ang <a href="/tl/">covid19.ca.gov</a> o tumawag sa <strong><a href="tel:833-422-4255">833-422-4255</a></strong> </strong></li>
-<li><span style="font-weight: 400;">Kung hinahanap mo ang California COVID Notify, ang notification system para sa pagkakalantad ng Google at Apple: </span><b>bisitahin ang </b><a href="https://canotify.uchealth.edu/ucsdh/"><span style="font-weight: 400;">California COVID Notify</span></a> <b>o tumawag sa</b><span style="font-weight: 400;"><a href="http://Tel:888-421-9457" data-wplink-url-error="true"> 888-421-9457</a>. </span></li>
-<li>Kung naghahanap ka ng mga serbisyo at suporta sa komunidad: <strong>Tumawag sa <a href="tel:211">211</a></strong></li>
-<li>Kung naghahanap ka ng gamot at medikal na atensyon: <strong>Tumawag sa iyong tagapangalaga ng kalusugan o parmasya</strong></li>
+<li>Kung naghahanap ka ng pangkalahatang impormasyon tungkol sa mga resource ng estado para sa COVID-19: gamitin ang <a href="/tl/">covid19.ca.gov</a> o tumawag sa <a href="tel:833-422-4255">833-422-4255</a>.</li>
+<li>Kung hinahanap mo ang California COVID Notify, ang notification system para sa pagkakalantad ng Google at Apple: bisitahin ang <a href="https://canotify.uchealth.edu/ucsdh/">California COVID Notify</a> o tumawag sa <a href="Tel:888-421-9457">888-421-9457</a>. </li>
+<li>Kung naghahanap ka ng mga serbisyo at suporta sa komunidad: Tumawag sa <a href="tel:211">211</a>.</li>
+<li>Kung naghahanap ka ng gamot at medikal na atensyon: Tumawag sa iyong tagapangalaga ng kalusugan o parmasya.</li>
 </ol>
 
 
