--- a/vi/hotline/index.html
+++ b/vi/hotline/index.html
@@ -150,7 +150,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>Đường Dây Nóng COVID-19</h1>
           
-            <p class="small-text">Cập nhật mới nhất&nbsp;10 tháng 12, 2020 lúc 10:07</p>
+            <p class="small-text">Cập nhật mới nhất&nbsp;24 tháng 2, 2021 lúc 13:14</p>
           
         </div>
       </div>
@@ -215,10 +215,10 @@
 
 
 <ol>
-<li>Nếu quý vị đang tìm kiếm thông tin chung về các nguồn lực hỗ trợ trong đại dịch COVID-19 của tiểu bang: <strong>hãy sử dụng <a href="/vi/">covid19.ca.gov</a> hoặc gọi điện đến số <strong><a href="tel:833-422-4255">833-422-4255</a></strong> </strong></li>
-<li><span style="font-weight: 400;">Nếu quý vị đang tìm kiếm Thông Báo COVID California, hệ thống thông báo tiếp xúc của Google và Apple: </span><b>truy cập </b><a href="https://canotify.uchealth.edu/ucsdh/"><span style="font-weight: 400;">Thông Báo COVID California</span></a> <b>hoặc gọi</b><span style="font-weight: 400;"><a href="http://Tel:888-421-9457" data-wplink-url-error="true"> 888-421-9457</a>. </span></li>
-<li>Nếu quý vị đang tìm kiếm các dịch vụ và hỗ trợ cộng đồng: <strong>Hãy gọi <a href="tel:211">211</a></strong></li>
-<li>Nếu quý vị đang tìm kiếm thuốc men và dịch vụ thăm khám y tế: <strong>Hãy gọi điện tới nhà cung cấp dịch vụ chăm sóc sức khỏe hoặc nhà thuốc</strong></li>
+<li>Nếu quý vị đang tìm kiếm thông tin chung về các nguồn lực hỗ trợ trong đại dịch COVID-19 của tiểu bang: hãy truy cập <a href="/vi/">covid19.ca.gov</a> hoặc gọi số <a href="tel:833-422-4255">833-422-4255</a>.</li>
+<li>Nếu quý vị đang tìm kiếm Thông Báo COVID California, hệ thống thông báo tiếp xúc của Google và Apple: hãy truy cập <a href="https://canotify.uchealth.edu/ucsdh/">Thông Báo COVID California</a> hoặc gọi số <a href="Tel:888-421-9457">888-421-9457</a>.</li>
+<li>Nếu quý vị đang tìm kiếm các dịch vụ và hỗ trợ cộng đồng: Hãy gọi số <a href="tel:211">211</a>.</li>
+<li>Nếu quý vị đang tìm kiếm thuốc men và dịch vụ thăm khám y tế: Hãy gọi điện tới nhà cung cấp dịch vụ chăm sóc sức khỏe hoặc nhà thuốc của quý vị.</li>
 </ol>
 
 
