--- a/zh-hans/hotline/index.html
+++ b/zh-hans/hotline/index.html
@@ -148,7 +148,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>COVID-19热线</h1>
           
-            <p class="small-text">最后更新时间&nbsp;2020年12月10日, 上午10:07</p>
+            <p class="small-text">最后更新时间&nbsp;2021年2月24日, 下午1:14</p>
           
         </div>
       </div>
@@ -213,14 +213,14 @@
 
 
 <ol>
-<li>如果您正在查找有关州COVID-19资源的一般信息：请<strong>访问<a href="/zh-hans/">covid19.ca.gov</a>或致电<strong><a href="tel:833-422-4255">833-422-4255</a></strong> </strong></li>
-<li><span style="font-weight: 400;">如果您正在查找California COVID Notify、Google和Apple的暴露通知系统：请</span><b>访问 </b><a href="https://canotify.uchealth.edu/ucsdh/"><span style="font-weight: 400;">California COVID Notify</span></a> <b>或致电</b><span style="font-weight: 400;"><a href="http://Tel:888-421-9457" data-wplink-url-error="true"> 888-421-9457</a>。</span></li>
-<li>如果您正在寻求社区服务和支持：<strong>拨打<a href="tel:211">211</a></strong></li>
-<li>如果您正在寻求药物和医疗服务：<strong>致电您的医疗保健提供者或药房</strong></li>
+<li>如果您正在查找有关州COVID-19资源的一般信息：访问<a href="/zh-hans/">covid19.ca.gov</a>或致电<a href="tel:833-422-4255">833-422-4255</a>。</li>
+<li>如果您正在查找California COVID Notify，Google和Apple的病毒接触通知系统：访问<a href="https://canotify.uchealth.edu/ucsdh/">California COVID Notify</a>或致电<a href="Tel:888-421-9457">888-421-9457</a>。</li>
+<li>如果您正在寻求社区服务和支持：致电<a href="tel:211">211</a>。</li>
+<li>如果您正在寻求药物和医疗服务：致电您的医疗保健提供者或药房。</li>
 </ol>
 
 
-<p><strong>若为紧急情况：拨打911</strong></p>
+<p><strong>若为紧急情况：致电911</strong></p>
 </div>
     </div>
   </div>
