--- a/zh-hant/hotline/index.html
+++ b/zh-hant/hotline/index.html
@@ -148,7 +148,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>COVID-19熱線</h1>
           
-            <p class="small-text">最近更新&nbsp;2020年12月10日, 上午10:07</p>
+            <p class="small-text">最近更新&nbsp;2021年2月24日, 下午1:14</p>
           
         </div>
       </div>
@@ -213,10 +213,10 @@
 
 
 <ol>
-<li>如果您正在查找有關州COVID-19新型冠狀病毒資源的一般資訊：請<strong>造訪<a href="/zh-hant/">covid19.ca.gov</a>或致電<strong><a href="tel:833-422-4255">833-422-4255</a></strong> </strong></li>
-<li><span style="font-weight: 400;">如果您正在查找California COVID Notify、Google和Apple暴露通知系統：請</span><b>造訪 </b><a href="https://canotify.uchealth.edu/ucsdh/"><span style="font-weight: 400;">California COVID Notify</span></a> <b>或致電</b><span style="font-weight: 400;"><a href="http://Tel:888-421-9457" data-wplink-url-error="true"> 888-421-9457</a>。 </span></li>
-<li>如果您正在尋求社區服務和支援：<strong>致電<a href="tel:211">211</a></strong></li>
-<li>如果您正在尋求藥物和醫療服務：<strong>致電您的醫療保健提供者或藥房</strong></li>
+<li>如果您正在查找有關州COVID-19新型冠狀病毒資源的一般資訊：請造訪<a href="/zh-hant/">covid19.ca.gov</a>或致電<a href="tel:833-422-4255">833-422-4255</a>。</li>
+<li>如果您正在查找California COVID Notify，Google和Apple的病毒接觸通知系統：請造訪<a href="https://canotify.uchealth.edu/ucsdh/">California COVID Notify</a>或致電<a href="Tel:888-421-9457">888-421-9457</a>。</li>
+<li>如果您正在尋求社區服務和支援：致電<a href="tel:211">211</a>。</li>
+<li>如果您正在尋求藥物和醫療服務：致電您的醫療保健提供者或藥房。</li>
 </ol>
 
 
