--- a/pages/wordpress-posts/v2-state-dashboard.html
+++ b/pages/wordpress-posts/v2-state-dashboard.html
@@ -480,6 +480,8 @@ data2.icu.ICU_SUSPECTED_COVID_PATIENTS_DAILY) | formatNumber(tags)-%}
                   <cagov-chart-dashboard-groups-gender-cases class="chart">
                     <ul class="d-none">
                       <li data-label="chartTitle">Confirmed cases by gender in California</li>
+                      <li data-label="chartLegend1">% of confirmed cases</li>
+                      <li data-label="chartLegend2">% of state population</li>
                     </ul>
                   </cagov-chart-dashboard-groups-gender-cases>                
                 </div>
@@ -487,6 +489,8 @@ data2.icu.ICU_SUSPECTED_COVID_PATIENTS_DAILY) | formatNumber(tags)-%}
                   <cagov-chart-dashboard-groups-gender-deaths class="chart">
                     <ul class="d-none">
                       <li data-label="chartTitle">Confirmed deaths by gender in California</li>
+                      <li data-label="chartLegend1">% of confirmed cases</li>
+                      <li data-label="chartLegend2">% of state population</li>
                     </ul>
                   </cagov-chart-dashboard-groups-gender-deaths>               
                 </div> 
@@ -506,6 +510,8 @@ data2.icu.ICU_SUSPECTED_COVID_PATIENTS_DAILY) | formatNumber(tags)-%}
                   <cagov-chart-dashboard-groups-age-cases class="chart">
                     <ul class="d-none">
                       <li data-label="chartTitle">Confirmed cases by age in California</li>
+                      <li data-label="chartLegend1">% of confirmed cases</li>
+                      <li data-label="chartLegend2">% of state population</li>
                     </ul>
                   </cagov-chart-dashboard-groups-age-cases>                
                 </div>
@@ -513,6 +519,8 @@ data2.icu.ICU_SUSPECTED_COVID_PATIENTS_DAILY) | formatNumber(tags)-%}
                   <cagov-chart-dashboard-groups-age-deaths class="chart">
                     <ul class="d-none">
                       <li data-label="chartTitle">Confirmed deaths by age in California</li>
+                      <li data-label="chartLegend1">% of confirmed cases</li>
+                      <li data-label="chartLegend2">% of state population</li>
                     </ul>
                   </cagov-chart-dashboard-groups-age-deaths>               
                 </div> 
@@ -535,6 +543,8 @@ data2.icu.ICU_SUSPECTED_COVID_PATIENTS_DAILY) | formatNumber(tags)-%}
                   <cagov-chart-dashboard-groups-race-ethnicity-cases class="chart">
                     <ul class="d-none">
                       <li data-label="chartTitle">Confirmed cases by race and ethnicity in California</li>
+                      <li data-label="chartLegend1">% of confirmed cases</li>
+                      <li data-label="chartLegend2">% of state population</li>
                     </ul>
                   </cagov-chart-dashboard-groups-race-ethnicity-cases>                
                 </div>
@@ -542,6 +552,8 @@ data2.icu.ICU_SUSPECTED_COVID_PATIENTS_DAILY) | formatNumber(tags)-%}
                   <cagov-chart-dashboard-groups-race-ethnicity-deaths class="chart">
                     <ul class="d-none">
                       <li data-label="chartTitle">Confirmed deaths by race and ethnicity in California</li>
+                      <li data-label="chartLegend1">% of confirmed cases</li>
+                      <li data-label="chartLegend2">% of state population</li>
                     </ul>
                   </cagov-chart-dashboard-groups-race-ethnicity-deaths>               
                 </div> 
