Update page - safer-economy.html f23126d98d16c541097235737c396017c877476a

--- a/safer-economy/index.html
+++ b/safer-economy/index.html
@@ -148,7 +148,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>Blueprint for a Safer Economy</h1>
           
-            <p class="small-text">Last updated&nbsp;February 25, 2021 at 9:31 AM</p>
+            <p class="small-text">Last updated&nbsp;February 25, 2021 at 9:56 AM</p>
           
         </div>
       </div>
@@ -364,7 +364,7 @@
                 </button>
                 <div class="card-container" aria-hidden="true">
                   <div class="card-body">
-            <ul><li>Stay home except for essential needs.</li><li>Wear a mask in public.</li><li>Wash your hands regularly.</li><li>Keep at least six feet of physical distance when in public.</li><li>Limit mixing with people you don’t live with.</li></ul>
+            <ul><li>Stay home except for essential needs.</li><li>Wear a mask in public.</li><li>Wash your hands regularly.</li><li>Keep at least six feet of physical distance when in public.</li><li>Limit mixing with people you don’t live with.</li><li><a href="https://covid19.ca.gov/vaccines/">Get vaccinated</a>.</li></ul>
 
                   </div>
                 </div>
