Update page - vaccines.html 1856babb78042d17aa632dd3ac67319adb9c5422

--- a/vaccines/index.html
+++ b/vaccines/index.html
@@ -150,7 +150,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>Vaccines</h1>
           
-            <p class="small-text">Last updated&nbsp;February 25, 2021 at 5:53 AM</p>
+            <p class="small-text">Last updated&nbsp;February 25, 2021 at 12:17 PM</p>
           
         </div>
       </div>
@@ -335,7 +335,7 @@
 
 
 
-<p><strong>Most Californians will be </strong><strong>vaccinated at:</strong></p>
+<p>Most Californians will be vaccinated at:</p>
 
 
 
@@ -459,7 +459,7 @@
 
 
 
-<p>Initially, vaccination was limited to healthcare workers and long-term care residents. Hence the data reflects those populations more than other California residents. Data shows the cumulative total administered.</p>
+<p>Initially, vaccination was limited to healthcare workers and long-term care residents. Hence the data reflects those populations more than other California residents. Data shows the cumulative total administered and is updated weekly on Thursdays.</p>
 
 
 
