--- a/tl/latest-news/index.html
+++ b/tl/latest-news/index.html
@@ -148,7 +148,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>Pinakabagong balita sa COVID-19</h1>
           
-            <p class="small-text">Huling na-update&nbsp;Pebrero 25, 2021 sa 10:47 AM</p>
+            <p class="small-text">Huling na-update&nbsp;Pebrero 25, 2021 sa 12:19 PM</p>
           
         </div>
       </div>
