--- a/vaccines/index.html
+++ b/vaccines/index.html
@@ -150,7 +150,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>Vaccines</h1>
           
-            <p class="small-text">Last updated&nbsp;February 25, 2021 at 12:49 PM</p>
+            <p class="small-text">Last updated&nbsp;February 25, 2021 at 1:02 PM</p>
           
         </div>
       </div>
@@ -319,11 +319,11 @@
 
 
 
-<p class="js-qa js-qa-answer">Healthcare workers, <a href="https://www.cdph.ca.gov/Programs/CID/DCDC/CDPH%20Document%20Library/COVID-19/K-12_Vaccines_Overview.pdf">educators and childcare providers</a>, and individuals 65+ who live or work in certain counties can book appointments immediately through the <a href="https://myturn.ca.gov">myturn.ca.gov</a> site or by calling (833) 422-4255.</p>
+<p class="js-qa js-qa-answer">Healthcare workers and individuals 65+ who live or work in certain counties can book appointments immediately through the <a href="https://myturn.ca.gov">myturn.ca.gov</a> site or by calling (833) 422-4255.</p>
 
 
 
-<p>Educators and childcare providers under age 65 can book an appointment on <a href="https://myturn.ca.gov/">myturn.ca.gov</a> with a single-use code that gives them expedited access. The State of California is working with local education and childcare organizations to distribute these codes.</p>
+<p>Educators and childcare providers under age 65 will be able to  book an appointment on <a href="https://myturn.ca.gov/">myturn.ca.gov</a> with a special code. The State of California is working with local education and childcare organizations to distribute these codes. Learn more about the<a href="https://www.cdph.ca.gov/Programs/CID/DCDC/CDPH%20Document%20Library/COVID-19/K-12_Vaccines_Overview.pdf"> K-12 school staff and childcare vaccine allocation plan</a>.</p>
 
 
 
@@ -339,7 +339,7 @@
 
 
 
-<p>You can use the CDC VaccineFinder tool to&nbsp; find vaccination locations near you:</p>
+<p>You can use the CDC VaccineFinder tool to find vaccination locations near you:</p>
 
 
 
