--- a/zh-hant/latest-news/index.html
+++ b/zh-hant/latest-news/index.html
@@ -148,7 +148,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>有關COVID-19的最新消息</h1>
           
-            <p class="small-text">最近更新&nbsp;February 25, 2021 at 1:04 PM</p>
+            <p class="small-text">最近更新&nbsp;February 25, 2021 at 1:22 PM</p>
           
         </div>
       </div>
@@ -157,6 +157,14 @@
     <div class="row">
       <div class="col-lg-10 mx-auto">
         <div class="card border-0 border-bottom rounded-0" lang="en-US">
+        <div class="card-body pl-0" lang="en-US">
+          <h2 class="card-title lead" lang="en-US">
+            <a href="https://www.cdph.ca.gov/Programs/OPA/Pages/NR21-064.aspx" lang="en-US" hreflang="en-US" rel="external">State Officials Announce Latest COVID-19 Facts&nbsp;(#335)</a>
+          </h2>
+          <p class="card-text" lang="en-US"><small class="text-muted"><!--de11cdfef8b94907cafc6f5a5b1bbd12 -->February 24, 2021</small></p>
+          <div class="card-text" lang="en-US">Today, the California Department of Public Health (CDPH) released the most recent statistics on COVID-19.</div>
+        </div>
+      </div> <div class="card border-0 border-bottom rounded-0" lang="en-US">
         <div class="card-body pl-0" lang="en-US">
           <h2 class="card-title lead" lang="en-US">
             <a href="https://www.cdph.ca.gov/Programs/OPA/Pages/NR21-063.aspx" lang="en-US" hreflang="en-US" rel="external">State Officials Announce Latest COVID-19 Facts&nbsp;(#334)</a>
