--- a/pages/wordpress-posts/new.html
+++ b/pages/wordpress-posts/new.html
@@ -1,10 +1,10 @@
 
-<h2 class="h3 text-primary m-0 pt-2 pb-3"><strong><strong>New youth and adult sports guidance outlines a return to competition</strong></strong></h2>
+<h2 class="h3 text-primary m-0 pt-2 pb-3"><strong><strong><strong>California accelerating vaccinations for education and childcare workers</strong></strong></strong></h2>
 
 
 
-<p>The California Department of Public Health has released new guidance for youth and adult recreational sports which will go into effect February 26. It shows which sports will be allowed to return to play in which tiers, based on level of contact and risk of coronavirus transmission.</p>
+<p>The state will dedicate 10% of vaccines to K-12 school staff and childcare workers starting March 1. These workers will get special codes that let them schedule expedited appointments through <a href="https://myturn.ca.gov/">myturn.ca.gov</a>.</p>
 
 
 
-<a href="https://www.cdph.ca.gov/Programs/CID/DCDC/Pages/COVID-19/outdoor-indoor-recreational-sports.aspx" class="action-link pt-3 pb-3 px-4">Read the guidance</a>
+<a href="https://www.cdph.ca.gov/Programs/CID/DCDC/CDPH%20Document%20Library/COVID-19/K-12_Vaccines_Overview.pdf?TSPD_101_R0=087ed344cfab2000c125e650773b596a9dc101ce13a20af74f4276acc098302b1a6dab6b7e713d16083cbf02181430002a6def99f459d421acae673be525856e7820fe2f89b216d77a02fd96708937a74e56bbd070a2b36156ba0f7828e21ba2" class="action-link pt-3 pb-3 px-4">See the allocation plan</a>
