--- a/vaccines/index.html
+++ b/vaccines/index.html
@@ -150,7 +150,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>Vaccines</h1>
           
-            <p class="small-text">Last updated&nbsp;February 25, 2021 at 1:02 PM</p>
+            <p class="small-text">Last updated&nbsp;February 25, 2021 at 1:21 PM</p>
           
         </div>
       </div>
@@ -1161,7 +1161,7 @@
 
 
 
-<ul><li>CDPH: <a href="https://www.cdph.ca.gov/Programs/CID/DCDC/Pages/COVID-19/Covid19Vaccines.aspx"></a><a href="https://www.cdph.ca.gov/Programs/CID/DCDC/Pages/COVID-19/Covid19Vaccines.aspx">COVID-19 (Coronavirus Disease 2019) Vaccines</a></li><li>CDPH: <a href="https://www.cdph.ca.gov/Programs/CID/DCDC/Pages/Immunization/COVID-19Vaccine.aspx">California COVID-19 Vaccination Program</a></li><li>CDC: <a title="CDC.gov COVID-19 Vaccines" href="https://www.cdc.gov/coronavirus/2019-ncov/vaccines/index.html">COVID-19 Vaccines</a></li><li>CDC: <a href="https://www.cdc.gov/coronavirus/2019-ncov/vaccines/keythingstoknow.html">Key Things to Know About COVID-19 Vaccines</a></li><li>CDC: <a href="https://www.cdc.gov/vaccines/covid-19/index.html">COVID-19 Vaccination</a></li></ul>
+<ul><li>CDPH: <a href="https://www.cdph.ca.gov/Programs/CID/DCDC/Pages/COVID-19/Covid19Vaccines.aspx"></a><a href="https://www.cdph.ca.gov/Programs/CID/DCDC/Pages/COVID-19/Covid19Vaccines.aspx">COVID-19 (Coronavirus Disease 2019) Vaccines</a></li><li>CDPH: <a href="https://www.cdph.ca.gov/Programs/CID/DCDC/Pages/Immunization/COVID-19Vaccine.aspx">California COVID-19 Vaccination Program</a></li><li>CDPH: <a href="https://www.cdph.ca.gov/Programs/CID/DCDC/Pages/COVID-19/COVID-Variants.aspx">Tracking Variants (The West Coast Strain)</a></li><li>CDC: <a title="CDC.gov COVID-19 Vaccines" href="https://www.cdc.gov/coronavirus/2019-ncov/vaccines/index.html">COVID-19 Vaccines</a></li><li>CDC: <a href="https://www.cdc.gov/coronavirus/2019-ncov/vaccines/keythingstoknow.html">Key Things to Know About COVID-19 Vaccines</a></li><li>CDC: <a href="https://www.cdc.gov/vaccines/covid-19/index.html">COVID-19 Vaccination</a></li></ul>
 
 
 
