--- a/vaccines/index.html
+++ b/vaccines/index.html
@@ -150,7 +150,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>Vaccines</h1>
           
-            <p class="small-text">Last updated&nbsp;February 25, 2021 at 2:25 PM</p>
+            <p class="small-text">Last updated&nbsp;February 25, 2021 at 3:05 PM</p>
           
         </div>
       </div>
@@ -323,6 +323,14 @@
 
 
 
+<div style="display:none;" class="js-qa js-qa-question">How can educators and childcare providers get their COVID-19 vaccine appointments?</div>
+
+
+
+<p class="js-qa js-qa-answer">Educators and childcare providers under age 65 will be able to&nbsp; book an appointment on <a href="https://myturn.ca.gov/">myturn.ca.gov</a> with a special code. The State of California is working with local education and childcare organizations to distribute these codes. Learn more about the<a href="https://www.cdph.ca.gov/Programs/CID/DCDC/CDPH%20Document%20Library/COVID-19/K-12_Vaccines_Overview.pdf"> K-12 school staff and childcare vaccine allocation plan</a>.</p>
+
+
+
 <p>Online appointment scheduling for other groups and residents of other counties will be available soon statewide. Appointments are available in Spanish.</p>
 
 
@@ -359,7 +367,7 @@
 
 
 
-<p>COVID-19 vaccines teach our immune systems how to recognize and fight the virus that causes COVID-19. It typically takes a few weeks after vaccination for the body to build protection (immunity) against the virus. That means it is possible a person could still get COVID-19 just after vaccination, because the vaccine has not had enough time to build immunity.&nbsp;</p>
+<p class="js-qa js-qa-answer">COVID-19 vaccines teach our immune systems how to recognize and fight the virus that causes COVID-19. It typically takes a few weeks after vaccination for the body to build protection (immunity) against the virus. That means it is possible a person could still get COVID-19 just after vaccination, because the vaccine has not had enough time to build immunity.&nbsp;</p>
 
 
 
