--- a/pages/translated-posts/new-ar.html
+++ b/pages/translated-posts/new-ar.html
@@ -2,8 +2,4 @@
 
 
 
-<p>وأصدرت إدارة الصحة العامة في كاليفورنيا إرشادات جديدة للرياضات الترفيهية للشباب والكبار والتي ستدخل حيز التنفيذ في 26 فبراير. وهي تُبين أي الرياضات سيُسمح لها بالعودة للعب وفي أي فئة، استنادا إلى مستوى الاتصال وخطر انتقال فيروس كورونا.</p>
-
-
-
-<p><a href="https://www.cdph.ca.gov/Programs/CID/DCDC/Pages/COVID-19/outdoor-indoor-recreational-sports.aspx" class="action-link pt-3 pb-3 px-4">اقرأ الإرشادات</a></p>
+<p>وأصدرت إدارة الصحة العامة في كاليفورنيا إرشادات جديدة للرياضات الترفيهية للشباب والكبار والتي ستدخل حيز التنفيذ في 26 فبراير. وهي تُبين أي الرياضات سيُسمح لها بالعودة للعب وفي أي فئة، استنادا إلى مستوى الاتصال وخطر انتقال فيروس كورونا.</p>    <a href="https://www.cdph.ca.gov/Programs/CID/DCDC/Pages/COVID-19/outdoor-indoor-recreational-sports.aspx" class="action-link pt-3 pb-3 px-4">اقرأ الإرشادات</a> 
