--- a/pages/translated-posts/new-zh-hans.html
+++ b/pages/translated-posts/new-zh-hans.html
@@ -2,8 +2,4 @@
 
 
 
-<p>加州公共卫生局针对青少年及成人休闲运动发布了新的指引，此指引将于2月26日生效。该指引基于接触程度和传播新型冠状病毒的风险等级，说明了各个等级中允许恢复进行的运动项目。</p>
-
-
-
-<p><a href="https://www.cdph.ca.gov/Programs/CID/DCDC/Pages/COVID-19/outdoor-indoor-recreational-sports.aspx" class="action-link pt-3 pb-3 px-4">阅读该指引</a></p>
+<p>加州公共卫生局针对青少年及成人休闲运动发布了新的指引，此指引将于2月26日生效。该指引基于接触程度和传播新型冠状病毒的风险等级，说明了各个等级中允许恢复进行的运动项目。</p><a href="https://www.cdph.ca.gov/Programs/CID/DCDC/Pages/COVID-19/outdoor-indoor-recreational-sports.aspx" class="action-link pt-3 pb-3 px-4">阅读该指引</a> 
