--- a/pages/translated-posts/new-zh-hant.html
+++ b/pages/translated-posts/new-zh-hant.html
@@ -2,8 +2,4 @@
 
 
 
-<p>加州公共衛生局針對青少年及成人休閒運動發佈了新的指引，此指引將於2月26日生效。該指引基於接觸程度和傳播新型冠狀病毒的風險等級，說明了各個等級中允許恢復進行的運動項目。</p>
-
-
-
-<p><a href="https://www.cdph.ca.gov/Programs/CID/DCDC/Pages/COVID-19/outdoor-indoor-recreational-sports.aspx" class="action-link pt-3 pb-3 px-4">閱讀該指引</a></p>
+<p>加州公共衛生局針對青少年及成人休閒運動發佈了新的指引，此指引將於2月26日生效。該指引基於接觸程度和傳播新型冠狀病毒的風險等級，說明了各個等級中允許恢復進行的運動項目。</p><a href="https://www.cdph.ca.gov/Programs/CID/DCDC/Pages/COVID-19/outdoor-indoor-recreational-sports.aspx" class="action-link pt-3 pb-3 px-4">閱讀該指引</a> 
