--- a/pages/translated-posts/new-tl.html
+++ b/pages/translated-posts/new-tl.html
@@ -2,8 +2,4 @@
 
 
 
-<p>Naglabas ang Departamento ng Pampublikong Kalusugan ng California (California Department of Public Health) ng bagong gabay para sa panlibangang sport para sa kabataan at nasa hustong gulang na magkakaroon ng bisa sa Pebrero 26. Ipinapakita nito kung aling mga sport ang papayagan nang malaro sa kung aling mga tier, batay sa antas ng contact at panganib ng transmisyon ng coronavirus.</p>
-
-
-
-<p><a href="https://www.cdph.ca.gov/Programs/CID/DCDC/Pages/COVID-19/outdoor-indoor-recreational-sports.aspx" class="action-link pt-3 pb-3 px-4">Basahin ang gabay</a></p>
+<p>Naglabas ang Departamento ng Pampublikong Kalusugan ng California (California Department of Public Health) ng bagong gabay para sa panlibangang sport para sa kabataan at nasa hustong gulang na magkakaroon ng bisa sa Pebrero 26. Ipinapakita nito kung aling mga sport ang papayagan nang malaro sa kung aling mga tier, batay sa antas ng contact at panganib ng transmisyon ng coronavirus.</p>    <a href="https://www.cdph.ca.gov/Programs/CID/DCDC/Pages/COVID-19/outdoor-indoor-recreational-sports.aspx" class="action-link pt-3 pb-3 px-4">Basahin ang gabay</a> 
