Update translation - 103446864 (#3456) 0772588d664ff61211cab671cdf7cc48e44932fe

--- a/es/index.html
+++ b/es/index.html
@@ -311,12 +311,7 @@
 
 
 
-<p>El Departamento de Salud Pública de California publicó una nueva guía para deportes recreativos para jóvenes y adultos que entrará en vigor el 26 de febrero. Muestra qué deportes se podrán volver a jugar y en qué niveles, según el nivel de contacto y el riesgo de transmisión del coronavirus.</p>
-
-
-
-<p><a href="https://www.cdph.ca.gov/Programs/CID/DCDC/Pages/COVID-19/outdoor-indoor-recreational-sports.aspx" class="action-link pt-3 pb-3 px-4">Lea la guía.</a></p>
-
+<p>El Departamento de Salud Pública de California publicó una nueva guía para deportes recreativos para jóvenes y adultos que entrará en vigor el 26 de febrero. Muestra qué deportes se podrán volver a jugar y en qué niveles, según el nivel de contacto y el riesgo de transmisión del coronavirus.</p>    <a href="https://www.cdph.ca.gov/Programs/CID/DCDC/Pages/COVID-19/outdoor-indoor-recreational-sports.aspx" class="action-link pt-3 pb-3 px-4">Lea la guía.</a> 
 						</div>
 					</div>
 
