--- a/ko/index.html
+++ b/ko/index.html
@@ -311,12 +311,7 @@
 
 
 
-<p>캘리포니아 공중 보건부(California Department of Public Health)는 2월 26일 자로 시행되는 청소년 및 성인 레크리에이션 스포츠에 대한 새로운 지침을 발표하였습니다. 이를 통해 코로나바이러스 접촉자와 전파 위험 수준에 근거하여 단계 별로 어떤 스포츠를 할 수 있는지를 확인할 수 있습니다.</p>
-
-
-
-<p><a href="https://www.cdph.ca.gov/Programs/CID/DCDC/Pages/COVID-19/outdoor-indoor-recreational-sports.aspx" class="action-link pt-3 pb-3 px-4">해당 지침 확인</a></p>
-
+<p>캘리포니아 공중 보건부(California Department of Public Health)는 2월 26일 자로 시행되는 청소년 및 성인 레크리에이션 스포츠에 대한 새로운 지침을 발표하였습니다. 이를 통해 코로나바이러스 접촉자와 전파 위험 수준에 근거하여 단계 별로 어떤 스포츠를 할 수 있는지를 확인할 수 있습니다.</p>    <a href="https://www.cdph.ca.gov/Programs/CID/DCDC/Pages/COVID-19/outdoor-indoor-recreational-sports.aspx" class="action-link pt-3 pb-3 px-4">해당 지침 확인</a> 
 						</div>
 					</div>
 
