--- a/vi/index.html
+++ b/vi/index.html
@@ -313,12 +313,7 @@
 
 
 
-<p>Sở Y Tế Công Cộng California đã ban hành hướng dẫn mới về các môn thể thao giải trí dành cho người lớn và thanh thiếu niên sẽ có hiệu lực từ ngày 26 tháng 2. Hướng dẫn này sẽ cho biết các môn thể thao nào sẽ được phép chơi trở lại ở cấp độ nào, dựa trên mức độ tiếp xúc và nguy cơ lây truyền vi-rút corona.</p>
-
-
-
-<p><a href="https://www.cdph.ca.gov/Programs/CID/DCDC/Pages/COVID-19/outdoor-indoor-recreational-sports.aspx" class="action-link pt-3 pb-3 px-4">Đọc hướng dẫn</a></p>
-
+<p>Sở Y Tế Công Cộng California đã ban hành hướng dẫn mới về các môn thể thao giải trí dành cho người lớn và thanh thiếu niên sẽ có hiệu lực từ ngày 26 tháng 2. Hướng dẫn này sẽ cho biết các môn thể thao nào sẽ được phép chơi trở lại ở cấp độ nào, dựa trên mức độ tiếp xúc và nguy cơ lây truyền vi-rút corona.</p>    <a href="https://www.cdph.ca.gov/Programs/CID/DCDC/Pages/COVID-19/outdoor-indoor-recreational-sports.aspx" class="action-link pt-3 pb-3 px-4">Đọc hướng dẫn</a> 
 						</div>
 					</div>
 
