--- a/education/index.html
+++ b/education/index.html
@@ -148,7 +148,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>Education</h1>
           
-            <p class="small-text">Last updated&nbsp;February 22, 2021 at 6:48 PM</p>
+            <p class="small-text">Last updated&nbsp;February 25, 2021 at 5:24 PM</p>
           
         </div>
       </div>
@@ -170,7 +170,35 @@
 
 
 
-<h2 id="questions">K-12</h2>
+<p>On this page, you will find:</p>
+
+
+
+<ul><li><a href="#vaccines-for-educators">Vaccines for K-12 educators</a></li><li><a href="#k-12-guidance">K-12 guidance</a></li><li><a href="#higher-education-guidance" data-type="internal" data-id="#higher-education-guidance">Higher education guidance</a></li></ul>
+
+
+
+<h2 id="vaccines-for-educators">K-12 school staff and childcare vaccine allocation</h2>
+
+
+
+<p>Educators and childcare providers under age 65 will be able to&nbsp; book an appointment on <a href="https://myturn.ca.gov/">myturn.ca.gov</a> with a special code. The State of California is working with local education and childcare organizations to distribute these codes. Learn more about the <a href="https://www.cdph.ca.gov/Programs/CID/DCDC/CDPH%20Document%20Library/COVID-19/K-12_Vaccines_Overview.pdf">K-12 school staff and childcare vaccine allocation plan</a>.</p>
+
+
+
+<p>Education workers qualify for an expedited appointment if they:&nbsp;</p>
+
+
+
+<ul><li>Are a teacher (including substitute teachers), paraprofessional, bus driver, food service worker, custodial service worker, site based administrator</li><li>Are currently working in person or are scheduled to return in the next 21 days</li><li>Report to a school site or worksite supporting meal distribution or technological access for students</li></ul>
+
+
+
+<p>Flexibility regarding the 21-day window will be permissible based on available supply and priority to accelerate school reopenings.</p>
+
+
+
+<h2 id="k-12-guidance">K-12</h2>
 
 
 
@@ -214,7 +242,7 @@
 
 
 
-<h2>Higher education</h2>
+<h2 id="higher-education-guidance">Higher education</h2>
 
 
 
