Update translation - 103483010 (#3458) c4da7d87393d57b0ee6eacd846eef4762804047b

--- a/tl/safer-economy/index.html
+++ b/tl/safer-economy/index.html
@@ -148,7 +148,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>Blueprint para sa Mas Ligtas na Ekonomiya</h1>
           
-            <p class="small-text">Huling na-update&nbsp;Pebrero 25, 2021 sa 5:25 PM</p>
+            <p class="small-text">Huling na-update&nbsp;Pebrero 26, 2021 sa 9:02 AM</p>
           
         </div>
       </div>
@@ -337,7 +337,7 @@
                 </button>
                 <div class="card-container" aria-hidden="true">
                   <div class="card-body">
-            <ul><li>Manatili sa bahay maliban kung para sa mahahalagang kinakailangan.</li><li>Magsuot ng mask sa mga pampublikong lugar.</li><li>Regulas na maghugas ng kamay.</li><li>Magpanatili ng hindi bababa sa anim na talampakang layo sa mga tao kapag nasa pampublikong lugar.</li><li>Iwasang makisalamuha sa mga taong hindi mo kasama sa bahay.</li></ul>
+            <ul><li>Manatili sa bahay maliban kung para sa mahahalagang kinakailangan.</li><li>Magsuot ng mask sa mga pampublikong lugar.</li><li>Regulas na maghugas ng kamay.</li><li>Magpanatili ng hindi bababa sa anim na talampakang layo sa mga tao kapag nasa pampublikong lugar.</li><li>Iwasang makisalamuha sa mga taong hindi mo kasama sa bahay.</li><li><a href="/tl/vaccines/">Magpabakuna</a>.</li></ul>
 
                   </div>
                 </div>
