--- a/zh-hant/safer-economy/index.html
+++ b/zh-hant/safer-economy/index.html
@@ -148,7 +148,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>更安全的經濟藍圖</h1>
           
-            <p class="small-text">最近更新&nbsp;2021年2月25日, 下午5:25</p>
+            <p class="small-text">最近更新&nbsp;2021年2月26日, 上午9:02</p>
           
         </div>
       </div>
@@ -337,7 +337,7 @@
                 </button>
                 <div class="card-container" aria-hidden="true">
                   <div class="card-body">
-            <ul><li>除必要需求外，請待在家中。</li><li>在公共場所佩戴口罩。</li><li>經常洗手。</li><li>在公共場所時，至少要與人保持6英尺的距離。</li><li>限制與非同住者交往。</li></ul>
+            <ul><li>除必要需求外，請待在家中。</li><li>在公共場所佩戴口罩。</li><li>經常洗手。</li><li>在公共場所時，至少要與人保持6英尺的距離。</li><li>限制與非同住人士的接觸。</li><li><a href="/zh-hant/vaccines/">接種疫苗</a>。</li></ul>
 
                   </div>
                 </div>
