--- a/ar/data-and-tools/index.html
+++ b/ar/data-and-tools/index.html
@@ -148,7 +148,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>البيانات والأدوات</h1>
           
-            <p class="small-text">آخر التحديثات&nbsp;5:25 م الساعة 25 فبراير 2021</p>
+            <p class="small-text">آخر التحديثات&nbsp;9:02 ص الساعة 26 فبراير 2021</p>
           
         </div>
       </div>
