--- a/ar/safer-economy/index.html
+++ b/ar/safer-economy/index.html
@@ -148,7 +148,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>برامج تخطيطية لاقتصاد أكثر أمانا</h1>
           
-            <p class="small-text">آخر التحديثات&nbsp;5:25 م الساعة 25 فبراير 2021</p>
+            <p class="small-text">آخر التحديثات&nbsp;9:02 ص الساعة 26 فبراير 2021</p>
           
         </div>
       </div>
@@ -337,7 +337,7 @@
                 </button>
                 <div class="card-container" aria-hidden="true">
                   <div class="card-body">
-            <ul><li>عليك البقاء في المنزل إلا للضروريات.</li><li>ارتدِ قناعًا في الأماكن العامة.</li><li>اغسل يديك بانتظام.</li><li>حافظ على التباعد الجسدي مسافة ستة أقدام على الأقل عندما تكون في الأماكن العامة.</li><li>الحد من الاختلاط بالأشخاص الذين لا تعيش معهم.</li></ul>
+            <ul><li>عليك البقاء في المنزل إلا للضروريات.</li><li>ارتدِ قناعًا في الأماكن العامة.</li><li>اغسل يديك بانتظام.</li><li>حافظ على التباعد الجسدي مسافة ستة أقدام على الأقل عندما تكون في الأماكن العامة.</li><li>الحد من الاختلاط بالأشخاص الذين لا تعيش معهم.</li><li><a href="/ar/vaccines/">الحصول على التطعيم</a>.</li></ul>
 
                   </div>
                 </div>
