--- a/es/safer-economy/index.html
+++ b/es/safer-economy/index.html
@@ -148,7 +148,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>Plan para una economía más segura</h1>
           
-            <p class="small-text">Última actualización&nbsp;25 de febrero de 2021 a las 5:25 p. m.</p>
+            <p class="small-text">Última actualización&nbsp;26 de febrero de 2021 a las 9:02 a. m.</p>
           
         </div>
       </div>
@@ -337,7 +337,7 @@
                 </button>
                 <div class="card-container" aria-hidden="true">
                   <div class="card-body">
-            <ul><li>Permanezca en casa, excepto para necesidades esenciales.</li><li>Use mascarilla en público.</li><li>Lávese las manos frecuentemente.</li><li>Mantenga un distanciamiento físico de al menos seis pies cuando esté en público.</li><li>Limite estar con gente con la que no vive.</li></ul>
+            <ul><li>Permanezca en casa, excepto para necesidades esenciales.</li><li>Use mascarilla en público.</li><li>Lávese las manos frecuentemente.</li><li>Mantenga un distanciamiento físico de al menos seis pies cuando esté en público.</li><li>Evite convivir con gente con la que no vive.</li><li><a href="/es/vaccines/">Vacúnese</a>.</li></ul>
 
                   </div>
                 </div>
