--- a/ko/safer-economy/index.html
+++ b/ko/safer-economy/index.html
@@ -148,7 +148,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>더욱 안전한 경제</h1>
           
-            <p class="small-text">최종 갱신 일자&nbsp;2021년 2월 25일 오후 5:25</p>
+            <p class="small-text">최종 갱신 일자&nbsp;2021년 2월 26일 오전 9:02</p>
           
         </div>
       </div>
@@ -337,7 +337,7 @@
                 </button>
                 <div class="card-container" aria-hidden="true">
                   <div class="card-body">
-            <ul><li>필수적으로 필요한 경우가 아니면 집에 머물러 주십시오.</li><li>공공 장소에서 마스크를 착용하십시오.</li><li>손을 자주 씻으십시오.</li><li>공공 장소에 있을 경우 최소 6 피트의 물리적 거리를 유지하십시오.</li><li>비동거인과의 교제를 제한하십시오.</li></ul>
+            <ul><li>필수적으로 필요한 경우가 아니면 집에 머물러 주십시오.</li><li>공공 장소에서 마스크를 착용하십시오.</li><li>손을 자주 씻으십시오.</li><li>공공 장소에 있을 경우 최소 6 피트의 물리적 거리를 유지하십시오.</li><li>비동거인과의 교제를 제한하십시오.</li><li><a href="/ko/vaccines/">백신 접종 받기</a>.</li></ul>
 
                   </div>
                 </div>
