--- a/vi/safer-economy/index.html
+++ b/vi/safer-economy/index.html
@@ -150,7 +150,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>Kế Hoạch Chi Tiết Vì Một Nền Kinh Tế An Toàn Hơn</h1>
           
-            <p class="small-text">Cập nhật mới nhất&nbsp;25 tháng 2, 2021 lúc 17:25</p>
+            <p class="small-text">Cập nhật mới nhất&nbsp;26 tháng 2, 2021 lúc 9:02</p>
           
         </div>
       </div>
@@ -311,7 +311,7 @@
                 </button>
                 <div class="card-container" aria-hidden="true">
                   <div class="card-body">
-            <p>Các trường học từ mẫu giáo đến lớp 12 có thể mở cửa trở lại để giảng dạy trên lớp theo <a href="https://schools.covid19.ca.gov/">Hướng Dẫn cho Các Trường Học từ Mẫu Giáo đến Lớp 12</a>. Các trường học từ mẫu giáo đến lớp 6 có thể mở cửa khi quận của họ có tỷ lệ ca mắc dưới 25 ca trên mỗi 100,00 người (đã điều chỉnh) và nếu các trường học tuân thủ các quy trình khác để mở cửa trở lại trường học được nêu trong hướng dẫn đó. Các Trường Trung Học Cơ Sở và Phổ Thông có thể mở cửa khi quận của họ thuộc cấp Nghiêm Trọng (màu đỏ) và cũng đã tuân thủ hướng dẫn mở cửa trở lại trường học. Ngày đầu tiên các trường học đủ điều kiện để mở cửa trở lại theo bất kỳ một trong hai tiêu chí là ngày sau khi quận đáp ứng số liệu phù hợp (tỷ lệ ca mắc dưới 25 hoặc thuộc cấp Nghiêm Trọng (màu đỏ)) của Kế Hoạch Chi Tiết Vì Một Nền Kinh Tế An Toàn Hơn (được công bố hàng tuần vào Thứ Ba, do đó các trường học sẽ đủ điều kiện mở cửa trở lại vào Thứ Tư). Trường học tại các quận đã đáp ứng các tiêu chí phù hợp để mở cửa trở lại trường học theo Hướng Dẫn cho Mẫu Giáo đến Lớp 12 có khoảng thời gian ba tuần để mở cửa, bắt đầu từ ngày quận đáp ứng các tiêu chí để mở cửa trở lại, ngay cả khi quận không còn đáp ứng các tiêu chí trong suốt khoảng thời gian đó (có nghĩa là tỷ lệ ca mắc ≥25 ca trong lần tính sau đó hoặc chỉ định quận trở lại cấp Lan Rộng [màu tím] trong suốt khoảng thời gian đó). Mục đích của khoảng thời gian ba tuần này là để tạo điều kiện thuận lợi cho việc mở cửa trở lại trường học một cách bình tĩnh và an toàn.</p>
+            <p>Các trường học từ mẫu giáo đến lớp 12 có thể mở cửa trở lại để giảng dạy trên lớp theo <a href="https://schools.covid19.ca.gov/">Hướng Dẫn cho Các Trường Học từ Mẫu Giáo đến Lớp 12</a>. Các trường học từ mẫu giáo đến lớp 6 có thể mở cửa khi quận của họ có tỷ lệ ca mắc dưới 25 ca trên mỗi 100,00 người (đã điều chỉnh) và nếu các trường học tuân thủ các quy trình khác để mở cửa trở lại trường học được nêu trong hướng dẫn đó. Các Trường Trung Học Cơ Sở và Phổ Thông có thể mở cửa khi quận của họ thuộc cấp Nghiêm Trọng (màu đỏ) và cũng đã tuân thủ hướng dẫn mở cửa trở lại trường học. Ngày đầu tiên các trường học đủ điều kiện để mở cửa trở lại theo bất kỳ một trong hai tiêu chí là ngày sau khi quận đáp ứng số liệu phù hợp (tỷ lệ ca mắc dưới 25 hoặc thuộc cấp Nghiêm Trọng (màu đỏ)) của Kế Hoạch Chi Tiết Vì Một Nền Kinh Tế An Toàn Hơn (được công bố hàng tuần vào Thứ Ba, do đó các trường học sẽ đủ điều kiện mở cửa trở lại vào Thứ Tư). Trường học tại các quận đã đáp ứng các tiêu chí phù hợp để mở cửa trở lại trường học theo Hướng Dẫn cho Mẫu Giáo đến Lớp 12 có khoảng thời gian ba tuần để mở cửa, bắt đầu từ ngày quận đáp ứng các tiêu chí để mở cửa trở lại, ngay cả khi quận không còn đáp ứng các tiêu chí trong suốt khoảng thời gian đó (có nghĩa là tỷ lệ ca mắc ≥25 trong lần tính sau đó hoặc chỉ định quận trở lại cấp Lan Rộng [màu tím] trong suốt khoảng thời gian đó). Mục đích của khoảng thời gian ba tuần này là để tạo điều kiện thuận lợi cho việc mở cửa trở lại trường học một cách bình tĩnh và an toàn.</p>
 <p>Tìm hiểu thêm về <a href="https://www.cdph.ca.gov/Programs/CID/DCDC/CDPH%20Document%20Library/COVID-19/Consolidated_Schools_Guidance.pdf">hướng dẫn dành cho các trường học<span class="pdf-link-icon no-underline-icon" aria-hidden="true">PDF</span></a>.</p>
 
                   </div>
@@ -339,7 +339,7 @@
                 </button>
                 <div class="card-container" aria-hidden="true">
                   <div class="card-body">
-            <ul><li>Hãy ở nhà trừ khi cần ra ngoài vì các nhu cầu thiết yếu.</li><li>Đeo khẩu trang ở nơi công cộng.</li><li>Rửa tay thường xuyên.</li><li>Giữ khoảng cách vật lý ít nhất sáu foot khi ở nơi công cộng.</li><li>Hạn chế tụ tập với những người mà quý vị không sống cùng.</li></ul>
+            <ul><li>Hãy ở nhà trừ khi cần ra ngoài vì các nhu cầu thiết yếu.</li><li>Đeo khẩu trang ở nơi công cộng.</li><li>Rửa tay thường xuyên.</li><li>Giữ khoảng cách vật lý ít nhất sáu foot khi ở nơi công cộng.</li><li>Hạn chế tụ tập với những người mà quý vị không sống cùng.</li><li><a href="/vi/vaccines/">Tiêm vắc-xin</a>.</li></ul>
 
                   </div>
                 </div>
