--- a/zh-hans/safer-economy/index.html
+++ b/zh-hans/safer-economy/index.html
@@ -148,7 +148,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>更安全的经济蓝图</h1>
           
-            <p class="small-text">最后更新时间&nbsp;2021年2月25日, 下午5:25</p>
+            <p class="small-text">最后更新时间&nbsp;2021年2月26日, 上午9:02</p>
           
         </div>
       </div>
@@ -337,7 +337,7 @@
                 </button>
                 <div class="card-container" aria-hidden="true">
                   <div class="card-body">
-            <ul><li>除必要需求外，请待在家中。</li><li>在公共场所佩戴口罩。</li><li>经常洗手</li><li>在公共场所时，与他人保持六英尺的身体距离。</li><li>限制加入到不与您同住的人群中。</li></ul>
+            <ul><li>除必要需求外，请待在家中。</li><li>在公共场所佩戴口罩。</li><li>经常洗手</li><li>在公共场所时，与他人保持六英尺的身体距离。</li><li>尽量减少与非同住人士的接触。</li><li><a href="/zh-hans/vaccines/">接种疫苗</a>。</li></ul>
 
                   </div>
                 </div>
