Update translation - 103454717 (#3461) 6ed206c234f9b1214fad7588a897b6413560203d

--- a/ar/treatment-for-covid-19/index.html
+++ b/ar/treatment-for-covid-19/index.html
@@ -148,7 +148,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>العلاج</h1>
           
-            <p class="small-text">آخر التحديثات&nbsp;5:05 م الساعة 18 فبراير 2021</p>
+            <p class="small-text">آخر التحديثات&nbsp;6:03 م الساعة 24 فبراير 2021</p>
           
         </div>
       </div>
@@ -201,7 +201,11 @@
 
 
 
-<p>تنص<a href="https://www.covid19treatmentguidelines.nih.gov/therapeutic-management/">إرشادات علاج كوفيد-19 الصادرة عن المعاهد الصحية الوطنية</a> على عدم وجود أدلة كافية للتوصية بهذه العلاجات أو التحذير منها. ولا ينبغي اعتبارها من معايير الرعاية، فهذه العلاجات متوفرة في <a href="https://protect-public.hhs.gov/pages/therapeutics-distribution/">مواقع توزيع</a> محددة. وهي متوفرة أيضًا في العديد من مرافق الرعاية طويلة الأجل في كاليفورنيا.</p>
+<p>إن إرشادات علاج كوفيد-19 الصادرة عن المعاهد الصحية الوطنية <a href="https://www.covid19treatmentguidelines.nih.gov/statement-on-bamlanivimab-plus-etesevimab-eua/">توصي باستخدام bamlanivimab وbamlanivimab وetesevimab معًا</a> لعلاج مرضى  العيادات الخارجية المصابين بفيروس كوفيد-19 الخفيف إلى المتوسط والذين هم في خطر كبير من التقدم السريري للمرض. <a href="https://www.covid19treatmentguidelines.nih.gov/therapeutic-management/">وتقول أيضًا</a> أنه لا يوجد دليل كافٍ للتوصية بتأييد أو عدم استخدام علاجين آخرين من الأجسام المضادة أحادية النسيلة.</p>
+
+
+
+<p>فهذه العلاجات متوفرة في <a href="https://protect-public.hhs.gov/pages/therapeutics-distribution/">مواقع توزيع</a> محددة. وهي متوفرة أيضًا في العديد من مرافق الرعاية طويلة الأجل في كاليفورنيا.</p>
 
 
 
