--- a/ko/treatment-for-covid-19/index.html
+++ b/ko/treatment-for-covid-19/index.html
@@ -148,7 +148,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>치료</h1>
           
-            <p class="small-text">최종 갱신 일자&nbsp;2021년 2월 18일 오후 5:05</p>
+            <p class="small-text">최종 갱신 일자&nbsp;2021년 2월 24일 오후 6:03</p>
           
         </div>
       </div>
@@ -201,7 +201,11 @@
 
 
 
-<p><a href="https://www.covid19treatmentguidelines.nih.gov/therapeutic-management/">NIH COVID-19 치료 지침</a>에 따르면 해당 치료를 권장하거나 권장하지 않을 만한 증거가 충분하지 않습니다. 해당 치료를 기본 의료로 간주하면 안 됩니다. 해당 치료는 지정된 <a href="https://protect-public.hhs.gov/pages/therapeutics-distribution/">배포소</a>에서 제공합니다.. 또한 캘리포니아 내 장기 요양 시설에서도 제공합니다.</p>
+<p>NIH COVID-19 치료 지침은 임상적 진행에 대한 고위험군으로서 경미하거나 중간 수준의 COVID-1에 걸린 외래 환자를 치료하는 경우 <a href="https://www.covid19treatmentguidelines.nih.gov/statement-on-bamlanivimab-plus-etesevimab-eua/">밤라미비맙 그리고 밤라미비맙과 에테세비밥 동시 투여를 사용할 것을 권장</a>하고 있습니다. <a href="https://www.covid19treatmentguidelines.nih.gov/therapeutic-management/">또한 이 지침에 따르면</a> 다른 두가지의 단일 항원성 항체 치료를 권장하거나 권장하지 않기에는 증거가 충분하지 않습니다.</p>
+
+
+
+<p>해당 치료는 지정된 <a href="https://protect-public.hhs.gov/pages/therapeutics-distribution/">배급소</a>에서 제공합니다.. 또한 캘리포니아 내 장기 요양 시설에서도 제공합니다.</p>
 
 
 
