--- a/tl/treatment-for-covid-19/index.html
+++ b/tl/treatment-for-covid-19/index.html
@@ -148,7 +148,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>Paggamot</h1>
           
-            <p class="small-text">Huling na-update&nbsp;Pebrero 18, 2021 sa 5:05 PM</p>
+            <p class="small-text">Huling na-update&nbsp;Pebrero 24, 2021 sa 6:03 PM</p>
           
         </div>
       </div>
@@ -201,7 +201,11 @@
 
 
 
-<p>Ayon sa <a href="https://www.covid19treatmentguidelines.nih.gov/therapeutic-management/">Mga Alituntunin sa Paggamot ng NIH para sa COVID-19,</a> wala pang sapat na ebidensya para irekomenda o hindi irekomenda ang mga paggamot na ito. Hindi dapat ituring ang mga ito bilang pamantayan ng pangangalaga. Available ang mga paggamot na ito sa mga nakatalagang <a href="https://protect-public.hhs.gov/pages/therapeutics-distribution/">lokasyon para sa pamamahagi</a>. Available din ang mga ito sa maraming pasilidad para sa pangmatagalang pangangalaga sa California.</p>
+<p>Inirerekomenda ng Mga Gabay sa Paggamot ng COVID-19 ng NIH <a href="https://www.covid19treatmentguidelines.nih.gov/statement-on-bamlanivimab-plus-etesevimab-eua/">ang paggamit ng bamlanivimab, bamlanivimab, at etesevimab na ibinibigay kasabay ng</a> paggamot ng mga outpatient na may hindi malubha hanggang katamtamang COVID-19 at nasa mataas na panganib sa klinikal na paglubha. <a href="https://www.covid19treatmentguidelines.nih.gov/therapeutic-management/">Ayon din dito,</a> hindi sapat ang patunay para magrekomenda para sa o laban sa dalawang monoclonal antibody na paggamot.</p>
+
+
+
+<p>Available ang mga paggamot na ito sa mga nakatalagang <a href="https://protect-public.hhs.gov/pages/therapeutics-distribution/">lokasyon para sa pamamahagi</a>. Available din ang mga ito sa maraming pasilidad para sa pangmatagalang pangangalaga sa California.</p>
 
 
 
