--- a/vi/treatment-for-covid-19/index.html
+++ b/vi/treatment-for-covid-19/index.html
@@ -150,7 +150,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>Điều trị</h1>
           
-            <p class="small-text">Cập nhật mới nhất&nbsp;18 tháng 2, 2021 lúc 17:05</p>
+            <p class="small-text">Cập nhật mới nhất&nbsp;24 tháng 2, 2021 lúc 18:03</p>
           
         </div>
       </div>
@@ -203,7 +203,11 @@
 
 
 
-<p><a href="https://www.covid19treatmentguidelines.nih.gov/therapeutic-management/">Các Nguyên Tắc Hướng Dẫn Điều Trị COVID-19 của NIH</a> cho biết không có đủ bằng chứng để khuyến nghị hoặc phản đối các phương pháp điều trị này. Chúng không được coi là tiêu chuẩn chăm sóc. Các phương pháp điều trị này được cung cấp tại các <a href="https://protect-public.hhs.gov/pages/therapeutics-distribution/">địa điểm phân phối</a> được chỉ định. Chúng cũng được cung cấp tại nhiều cơ sở chăm sóc dài hạn tại California.</p>
+<p>NIH Hướng Dẫn Điều Trị COVID-19 <a href="https://www.covid19treatmentguidelines.nih.gov/statement-on-bamlanivimab-plus-etesevimab-eua/">khuyến nghị sử dụng bamlanivimab, bamlanivimab và etesevimab được tiêm đồng thời</a> để điều trị bệnh nhân ngoại trú nhiễm COVID-19 ở mức độ từ nhẹ đến trung bình, có nguy cơ tiến triển lâm sàng cao. <a href="https://www.covid19treatmentguidelines.nih.gov/therapeutic-management/">Hướng Dẫn cũng cho biết</a> không có đủ bằng chứng để khuyến nghị sử dụng hoặc không sử dụng hai phương pháp điều trị bằng kháng thể đơn dòng còn lại.</p>
+
+
+
+<p>Các phương pháp điều trị này được cung cấp tại các <a href="https://protect-public.hhs.gov/pages/therapeutics-distribution/">địa điểm phân phối</a> được chỉ định. Chúng cũng được cung cấp tại nhiều cơ sở chăm sóc dài hạn ở California.</p>
 
 
 
