--- a/zh-hant/treatment-for-covid-19/index.html
+++ b/zh-hant/treatment-for-covid-19/index.html
@@ -148,7 +148,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>治療</h1>
           
-            <p class="small-text">最近更新&nbsp;2021年2月18日, 下午5:05</p>
+            <p class="small-text">最近更新&nbsp;2021年2月24日, 下午6:03</p>
           
         </div>
       </div>
@@ -201,7 +201,11 @@
 
 
 
-<p><a href="https://www.covid19treatmentguidelines.nih.gov/therapeutic-management/">NIH COVID-19治療指引</a>指出，沒有足夠的證據來推薦或反對這些治療方法。這些治療方法不應被視為護理標準。指定的<a href="https://protect-public.hhs.gov/pages/therapeutics-distribution/">供應點</a>提供這些治療方法。加州許多長期護理設施亦提供這些治療方法。</p>
+<p>對於患有輕度至中度COVID-19，並具有臨床症狀惡化高風險的門診患者，NIH COVID-19治療指引<a href="https://www.covid19treatmentguidelines.nih.gov/statement-on-bamlanivimab-plus-etesevimab-eua/">建議施用bamlanivimab、bamlanivimab和etesevimab一起施打</a>。<a href="https://www.covid19treatmentguidelines.nih.gov/therapeutic-management/">該指引亦指出</a>，目前尚未有足夠證據表明應當推薦還是反對其他兩種單克隆抗體療法。</p>
+
+
+
+<p>指定的<a href="https://protect-public.hhs.gov/pages/therapeutics-distribution/">供應點</a>提供這些治療方法。加州許多長期護理設施亦提供這些治療方法。</p>
 
 
 
