--- a/es/treatment-for-covid-19/index.html
+++ b/es/treatment-for-covid-19/index.html
@@ -148,7 +148,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>Tratamiento</h1>
           
-            <p class="small-text">Última actualización&nbsp;18 de febrero de 2021 a las 5:05 p. m.</p>
+            <p class="small-text">Última actualización&nbsp;24 de febrero de 2021 a las 6:03 p. m.</p>
           
         </div>
       </div>
@@ -201,7 +201,11 @@
 
 
 
-<p>Las <a href="https://www.covid19treatmentguidelines.nih.gov/therapeutic-management/">Pautas de tratamiento de la COVID-19 de los NIH</a> dicen que no hay suficiente evidencia para hacer una recomendación a favor o en contra de estos tratamientos. No deben considerarse un tratamiento estándar. Estos tratamientos están disponibles en los <a href="https://protect-public.hhs.gov/pages/therapeutics-distribution/">lugares de distribución</a> designados. También están disponibles en muchos centros de atención a largo plazo de California.</p>
+<p>Las guías de tratamiento de la COVID-19 de los Institutos Nacionales de Salud (National Institutes of Health, NIH) <a href="https://www.covid19treatmentguidelines.nih.gov/statement-on-bamlanivimab-plus-etesevimab-eua/">recomiendan el uso de bamlanivimab, y bamlanivimab y etesevimab administrados juntos</a> para el tratamiento de pacientes ambulatorios con COVID-19 de leve a moderada que tienen un alto riesgo de progresión clínica. <a href="https://www.covid19treatmentguidelines.nih.gov/therapeutic-management/">También dicen</a> que no hay suficiente evidencia para recomendar o desaconsejar otros dos tratamientos con anticuerpos monoclonales.</p>
+
+
+
+<p>Estos tratamientos están disponibles en los <a href="https://protect-public.hhs.gov/pages/therapeutics-distribution/">lugares de distribución</a> designados. También están disponibles en muchos centros de atención a largo plazo de California.</p>
 
 
 
