--- a/zh-hans/treatment-for-covid-19/index.html
+++ b/zh-hans/treatment-for-covid-19/index.html
@@ -148,7 +148,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>治疗</h1>
           
-            <p class="small-text">最后更新时间&nbsp;2021年2月18日, 下午5:05</p>
+            <p class="small-text">最后更新时间&nbsp;2021年2月24日, 下午6:03</p>
           
         </div>
       </div>
@@ -201,7 +201,11 @@
 
 
 
-<p><a href="https://www.covid19treatmentguidelines.nih.gov/therapeutic-management/">NIH COVID-19治疗指引</a>指出，没有足够的证据来推荐或反对这些治疗方法。这些治疗方法不应被视为护理标准。指定的<a href="https://protect-public.hhs.gov/pages/therapeutics-distribution/">供应点</a>提供这些治疗方法。加州许多长期护理设施亦提供这些治疗方法。</p>
+<p>对于患有轻度至中度COVID-19，并具有临床症状恶化高风险的门诊患者，NIH COVID-19治疗指引<a href="https://www.covid19treatmentguidelines.nih.gov/statement-on-bamlanivimab-plus-etesevimab-eua/">建议施用bamlanivimab、bamlanivimab和etesevimab一起施打</a>。<a href="https://www.covid19treatmentguidelines.nih.gov/therapeutic-management/">该指引亦指出</a>，目前尚未有足够证据表明应当推荐还是反对其他两种单克隆抗体疗法。</p>
+
+
+
+<p>指定的<a href="https://protect-public.hhs.gov/pages/therapeutics-distribution/">供应点</a>可以提供上述治疗方法。加州许多长期护理设施亦提供上述治疗方法。</p>
 
 
 
